--- a/en/w/weasel.8232.wikitext
+++ b/en/w/weasel.8232.wikitext
@@ -7,80 +7,96 @@
 
 ===Etymology===
 
-The word ''weasel'' is the direct descendant of Old English ''wesule'', ''wesle'', ''weosule'', a weak feminine noun that has cognates in other Germanic languages (Dutch ''wezel'', German ''Wiesel''), but has no known cognates in other Indo-European langauges.
+The word ''weasel'' is the direct descendant of Old English ''wesule'', ''wesle'', ''weosule'', a weak feminine noun that has cognates in other Germanic languages (Dutch ''wezel'', German ''Wiesel''), but has no known cognates in other Indo-European languages.
 
 ===Noun===
 {{wikipedia}}
 {{en-noun}}
 
-#A [[carnivorous]] [[mammal]] of the genus ''[[Mustela]]'', having a slender body, a long tail and usually a light brown upper coat and white belly.
+#The [[least weasel]], ''(Mustela nivalis)''
+#Any of the [[carnivorous]] [[mammal]]s of the genus ''[[Mustela]]'', having a slender body, a long tail and usually a light brown upper coat and light-coloured belly.
 
 ====Translations====
-{{top}}
-*Albanian: [[nuse e lalës]]
-*[[Basque]]: [[erbinude]]
-*Belarussian: [[ласка]]
-*[[Bosnian]]: [[lasica]] ''f''
-*[[Breton]]: [[kaerell]]
-*Bulgarian: [[невестулка]] ([[nevestulka]])
-*[[Catalan]]: [[mostela]] ''f''
-*[[Chinese]]: [[黄鼠狼]]
-*Croatian: [[lasica]]
-*Czech: [[lasice]], [[kolčava]]
-*Danish: [[brud]]
-*Dutch: [[wezel]] ''m''
-*[[Esperanto]]: [[mustelo]]
+{{trans-top|Mustela nivalis}}
 *Estonian: [[nirk]]
 *Finnish: [[lumikko]]
-*French: [[belette]] ''f''
-*[[Frisian]]: [[wezeling]]
-*[[Friulian]]: [[bilite]]
-*[[Galician]]: [[donicela]], [[denociña]]
-*German: [[Wiesel]] ''n''
-*Greek: [[νυφίτσα]] (nifitsa) {{f}}, [[κουνάβι]] (kunavi) {{n}}
-*Hungarian: [[menyét]]
-*Icelandic: [[hreysiköttur]], [[vesla]]
-*Irish: [[bláthnaid ghallda]]
-*Italian: [[donnola]] ''f''
-*Japanese: [[鼬]] ([[イタチ]], itachi)
-*Korean:  [[족제비]] (jokjebi)
-{{mid}}
-*[[Ladin]]: [[belora]]
-*Latin: [[mustela#Latin|mustela]]
-*Latvian: [[zebiekste]]
-*Lithuanian: [[žebenkštis]]
-*[[Lower Sorbian]]: [[łasyca]], [[łasycka]]
-*Macedonian: [[невестулка]] ([[nevestulka]])
-*Maltese: [[ballottra]]
-*Norwegian: [[snømus]], [[vesel]]
-*[[Occitan]]: [[mostèla]], [[polida]]
-*Polish: [[łasica]] '' ''
-*Portuguese: [[doninha]]
-*Romanian: [[nevăstuică]] ''f''
-*[[Romansh]]: [[mustaila]]
-*[[Romany]]: [[boriori]] ''f''
-*Russian: [[ласка]] ([[laska]]) '' ''
-*[[Sami]]: [[nirpi]]
-*[[Sardinian]]: [[bucca de mele]], [[bucchemeli]]
-*Scottish: [[neas bheag]]
-*Serbian: [[ласица]] ([[lasica]])
-*Slovak: [[lasica]]
-*Slovenian: [[podlasica]] ''f''
-*Spanish: [[comadreja]] ''f'', [[mostela]] ''f''
-*Swedish: [[vessla]]
-*Turkish: [[gelincik]]
-*Ukrainian: [[ласиця]] ([[lasicja]])
-*[[Upper Sorbian]]: [[kohlica]]
-*Welsh: [[bronwen]], [[gwenci]]
-{{bottom}}
+{{trans-bottom}}
+
+{{trans-top|any mammal of the genus Mustela}}
+{{trans-bottom}}
+
+{{checktrans}}
+{{trans-top|translations to be checked}}
+*{{ttbc|Albanian}}: [[nuse e lalës]]
+*{{ttbc|Basque}}: [[erbinude]]
+*{{ttbc|Belarusian}}: [[ласка]]
+*{{ttbc|Bosnian}}: [[lasica]] ''f''
+*{{ttbc|Breton}}: [[kaerell]]
+*{{ttbc|Bulgarian}}: [[невестулка]] ([[nevestulka]])
+*{{ttbc|Catalan}}: [[mostela]] ''f''
+*{{ttbc|Chinese}}: [[黄鼠狼]]
+*{{ttbc|Croatian}}: [[lasica]]
+*{{ttbc|Czech}}: [[lasice]], [[kolčava]]
+*{{ttbc|Danish}}: [[brud]]
+*{{ttbc|Dutch}}: [[wezel]] ''m''
+*{{ttbc|Esperanto}}: [[mustelo]]
+*{{ttbc|French}}: [[belette]] ''f''
+*{{ttbc|Frisian}}: [[wezeling]]
+*{{ttbc|Friulian}}: [[bilite]]
+*{{ttbc|Galician}}: [[donicela]], [[denociña]]
+*{{ttbc|German}}: [[Wiesel]] ''n''
+*{{ttbc|Greek}}: [[νυφίτσα]] (nifitsa) {{f}}, [[κουνάβι]] (kunavi) {{n}}
+*{{ttbc|Hungarian}}: [[menyét]]
+*{{ttbc|Icelandic}}: [[hreysiköttur]], [[vesla]]
+*{{ttbc|Irish}}: [[bláthnaid ghallda]]
+*{{ttbc|Italian}}: [[donnola]] ''f''
+*{{ttbc|Japanese}}: [[鼬]] ([[イタチ]], itachi)
+*{{ttbc|Korean}}:  [[족제비]] (jokjebi)
+{{trans-mid}}
+*{{ttbc|Ladin}}: [[belora]]
+*{{ttbc|Latin}}: [[mustela#Latin|mustela]]
+*{{ttbc|Latvian}}: [[zebiekste]]
+*{{ttbc|Lithuanian}}: [[žebenkštis]]
+*{{ttbc|Lower Sorbian}}: [[łasyca]], [[łasycka]]
+*{{ttbc|Macedonian}}: [[невестулка]] ([[nevestulka]])
+*{{ttbc|Maltese}}: [[ballottra]]
+*{{ttbc|Norwegian}}: [[snømus]], [[vesel]]
+*{{ttbc|Occitan}}: [[mostèla]], [[polida]]
+*{{ttbc|Polish}}: [[łasica]] '' ''
+*{{ttbc|Portuguese}}: [[doninha]]
+*{{ttbc|Romanian}}: [[nevăstuică]] ''f''
+*{{ttbc|Romansh}}: [[mustaila]]
+*{{ttbc|Romany}}: [[boriori]] ''f''
+*{{ttbc|Russian}}: [[ласка]] ([[laska]]) '' ''
+*{{ttbc|Sami}}: [[nirpi]]
+*{{ttbc|Sardinian}}: [[bucca de mele]], [[bucchemeli]]
+*{{ttbc|Scottish}}: [[neas bheag]]
+*{{ttbc|Serbian}}: [[ласица]] ([[lasica]])
+*{{ttbc|Slovak}}: [[lasica]]
+*{{ttbc|Slovenian}}: [[podlasica]] ''f''
+*{{ttbc|Spanish}}: [[comadreja]] ''f'', [[mostela]] ''f''
+*{{ttbc|Swedish}}: [[vessla]]
+*{{ttbc|Turkish}}: [[gelincik]]
+*{{ttbc|Ukrainian}}: [[ласиця]] ([[lasicja]])
+*{{ttbc|Upper Sorbian}}: [[kohlica]]
+*{{ttbc|Welsh}}: [[bronwen]], [[gwenci]]
+{{trans-bottom}}
 
 ===Verb===
 '''to weasel''' (''[[present participle]]'' '''weaselling''' (''UK''), '''weaseling''' (''US''), ''[[past tense]] and [[past participle]]'' '''weaselled''' (''UK''), '''weaseled''' (''US''))
 
-# To benefit by clever or devious means, esp. to escape a commitment. (from the supposed cunningness of the weasel), 
+# To benefit by clever or devious means, esp. to escape a commitment (from the supposed cunningness of the weasel).
 :''To weasel out of doing something''
 :''To weasel something out of somebody''
 
+====Translations====
+{{trans-top|to weasel out of doing something}}
+*Finnish: [[lusmuilla]], [[kiemurrella]]
+{{trans-bottom}}
+
+{{trans-top|to weasel something out of somebody}}
+*Finnish: [[huiputtaa]], [[kieroilla]]
+{{trans-bottom}}
 
 ===Derived Terms===
 *[[weasel words]]
