--- a/en/l/least weasel.8233.wikitext
+++ b/en/l/least weasel.8233.wikitext
@@ -13,7 +13,7 @@
 {{top}}
 *Albanian: [[nuse e lalës]]
 *[[Basque]]: [[erbinude]]
-*[[Belarussian]]: [[ласка]]
+*Belarusian: [[ласка]]
 *[[Breton]]: [[kaerell]]
 *Bulgarian: [[невестулка]] ([[nevestulka]])
 *[[Catalan]]: [[mostela]]
@@ -22,7 +22,7 @@
 *Danish: [[brud]]
 *Dutch: [[wezel]] ''m''
 *Esperanto: [[mustelo]]
-*[[Estonian]]: [[nirk]]
+*Estonian: [[nirk]]
 *Finnish: [[lumikko]]
 *French: [[belette]] ''f''
 *[[Frisian]]: [[wezeling]]
@@ -38,11 +38,11 @@
 {{mid}}
 *[[Ladin]]: [[belora]]
 *Latin: [[Mustela nivalis]] '' ''
-*[[Latvian]]: [[zebiekste]]
-*[[Lithuanian]]: [[žebenkštis]]
+*Latvian: [[zebiekste]]
+*Lithuanian: [[žebenkštis]]
 *[[Lower Sorbian]]: [[łasyca]], [[łasycka]]
-*[[Macedonian]]: [[невестулка]] ([[nevestulka]])
-*[[Maltese]]: [[ballottra]]
+*Macedonian: [[невестулка]] ([[nevestulka]])
+*Maltese: [[ballottra]]
 *Norwegian: [[snømus]]
 *[[Occitan]]: [[mostèla]], [[polida]]
 *Polish: [[łasica]] '' ''
@@ -56,11 +56,11 @@
 *[[Scottish Gaelic]]: [[neas bheag]]
 *Serbian: [[ласица]] ([[lasica]])
 *Slovak: [[lasica]]
-*[[Slovenian]]: [[podlasica]]
+*Slovenian: [[podlasica]]
 *Spanish: [[mostela]] ''f''
 *Swedish: [[vessla]]
 *Turkish: [[gelincik]]
-*[[Ukrainian]]: [[ласиця]] ([[lasicja]])
+*Ukrainian: [[ласиця]] ([[lasicja]])
 *[[Upper Sorbian]]: [[kohlica]]
 *Welsh: [[bronwen]], [[gwenci]]
 {{bottom}}
