/* Etymology 1 - use ME & OE templ. */ <mill#2268766>

--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -8,8 +8,7 @@
 *[[mil]]
 
 ===Etymology 1===
-* Middle English ''[[mille]]''
-* Old English ''[[mylen]]''
+* {{ME.}} ''[[mille]]'', {{OE.}} ''[[mylen]]''
 
 ====Noun====
 {{en-noun}}
