gender -[[lasica]] ''f'' +[[lasica]] {{f}}, gender -[[mostela]] ''f'' +[[mostela]] {{f}}, gender -[[wezel]] ''m'' +[[wezel]] {{m}}, gender -[[belette]] ''f'' +[[belette]] {{f}}, gender -[[Wiesel]] ''n'' +[[Wiesel]] {{n}}, gender -[[donnola]] ''f'' +[ <weasel#2269596>

--- a/en/w/weasel.8232.wikitext
+++ b/en/w/weasel.8232.wikitext
@@ -1,4 +1,5 @@
 ==English==
+
 ===Pronunciation===
 * {{IPA|/'wiːzəl/}}
 *{{audio|en-us-weasel.ogg|Audio (US)}}
@@ -13,8 +14,8 @@ The word ''weasel'' is the direct descendant of Old English ''wesule'', ''wesle'
 {{wikipedia}}
 {{en-noun}}
 
-#The [[least weasel]], ''(Mustela nivalis)''
-#Any of the [[carnivorous]] [[mammal]]s of the genus ''[[Mustela]]'', having a slender body, a long tail and usually a light brown upper coat and light-coloured belly.
+# The [[least weasel]], ''(Mustela nivalis)''
+# Any of the [[carnivorous]] [[mammal]]s of the genus ''[[Mustela]]'', having a slender body, a long tail and usually a light brown upper coat and light-coloured belly.
 
 ====Translations====
 {{trans-top|Mustela nivalis}}
@@ -32,28 +33,28 @@ The word ''weasel'' is the direct descendant of Old English ''wesule'', ''wesle'
 *{{ttbc|Albanian}}: [[nuse e lalës]]
 *{{ttbc|Basque}}: [[erbinude]]
 *{{ttbc|Belarusian}}: [[ласка]]
-*{{ttbc|Bosnian}}: [[lasica]] ''f''
+*{{ttbc|Bosnian}}: [[lasica]] {{f}}
 *{{ttbc|Breton}}: [[kaerell]]
 *{{ttbc|Bulgarian}}: [[невестулка]] ([[nevestulka]])
-*{{ttbc|Catalan}}: [[mostela]] ''f''
+*{{ttbc|Catalan}}: [[mostela]] {{f}}
 *{{ttbc|Chinese}}: [[黄鼠狼]]
 *{{ttbc|Croatian}}: [[lasica]]
 *{{ttbc|Czech}}: [[lasice]], [[kolčava]]
 *{{ttbc|Danish}}: [[brud]]
-*{{ttbc|Dutch}}: [[wezel]] ''m''
+*{{ttbc|Dutch}}: [[wezel]] {{m}}
 *{{ttbc|Esperanto}}: [[mustelo]]
-*{{ttbc|French}}: [[belette]] ''f''
+*{{ttbc|French}}: [[belette]] {{f}}
 *{{ttbc|Frisian}}: [[wezeling]]
 *{{ttbc|Friulian}}: [[bilite]]
 *{{ttbc|Galician}}: [[donicela]], [[denociña]]
-*{{ttbc|German}}: [[Wiesel]] ''n''
+*{{ttbc|German}}: [[Wiesel]] {{n}}
 *{{ttbc|Greek}}: [[νυφίτσα]] (nifitsa) {{f}}, [[κουνάβι]] (kunavi) {{n}}
 *{{ttbc|Hungarian}}: [[menyét]]
 *{{ttbc|Icelandic}}: [[hreysiköttur]], [[vesla]]
 *{{ttbc|Irish}}: [[bláthnaid ghallda]]
-*{{ttbc|Italian}}: [[donnola]] ''f''
+*{{ttbc|Italian}}: [[donnola]] {{f}}
 *{{ttbc|Japanese}}: [[鼬]] ([[イタチ]], itachi)
-*{{ttbc|Korean}}:  [[족제비]] (jokjebi)
+*{{ttbc|Korean}}: [[족제비]] (jokjebi)
 {{trans-mid}}
 *{{ttbc|Ladin}}: [[belora]]
 *{{ttbc|Latin}}: [[mustela#Latin|mustela]]
@@ -66,16 +67,16 @@ The word ''weasel'' is the direct descendant of Old English ''wesule'', ''wesle'
 *{{ttbc|Occitan}}: [[mostèla]], [[polida]]
 *{{ttbc|Polish}}: [[łasica]] '' ''
 *{{ttbc|Portuguese}}: [[doninha]]
-*{{ttbc|Romanian}}: [[nevăstuică]] ''f''
+*{{ttbc|Romanian}}: [[nevăstuică]] {{f}}
 *{{ttbc|Romansh}}: [[mustaila]]
-*{{ttbc|Romany}}: [[boriori]] ''f''
+*{{ttbc|Romany}}: [[boriori]] {{f}}
 *{{ttbc|Sami}}: [[nirpi]]
 *{{ttbc|Sardinian}}: [[bucca de mele]], [[bucchemeli]]
 *{{ttbc|Scottish}}: [[neas bheag]]
 *{{ttbc|Serbian}}: [[ласица]] ([[lasica]])
 *{{ttbc|Slovak}}: [[lasica]]
-*{{ttbc|Slovenian}}: [[podlasica]] ''f''
-*{{ttbc|Spanish}}: [[comadreja]] ''f'', [[mostela]] ''f''
+*{{ttbc|Slovenian}}: [[podlasica]] {{f}}
+*{{ttbc|Spanish}}: [[comadreja]] {{f}}, [[mostela]] {{f}}
 *{{ttbc|Swedish}}: [[vessla]]
 *{{ttbc|Turkish}}: [[gelincik]]
 *{{ttbc|Ukrainian}}: [[ласиця]] ([[lasicja]])
@@ -101,7 +102,7 @@ The word ''weasel'' is the direct descendant of Old English ''wesule'', ''wesle'
 *Finnish: [[huiputtaa]], [[kieroilla]]
 {{trans-bottom}}
 
-===Derived Terms===
+===Derived terms===
 *[[weasel words]]
 
 ===See also===
