--- a/en/w/weasel.8232.wikitext
+++ b/en/w/weasel.8232.wikitext
@@ -16,6 +16,7 @@ The word ''weasel'' is the direct descendant of Old English ''wesule'', ''wesle'
 
 # The [[least weasel]], ''(Mustela nivalis)''
 # Any of the [[carnivorous]] [[mammal]]s of the genus ''[[Mustela]]'', having a slender body, a long tail and usually a light brown upper coat and light-coloured belly.
+# The taxonomic family [[Mustelidae]] is also called the '''weasel''' family.
 
 ====Translations====
 {{trans-top|Mustela nivalis}}
