--- a/en/b/badger.8231.wikitext
+++ b/en/b/badger.8231.wikitext
@@ -11,7 +11,7 @@
 [[Image:Dachs.jpg|thumbnail|right|A badger]]
 {{en-noun}}
 
-# Any of several carnivorous burrowing [[animal]]s of the family ''[[Mustelidae]]''.
+# A common name for any animal of three subfamilies, which belong to the family [[Mustelidae]]: Melinae (Eurasian badgers), Mellivorinae (Ratel or honey badger), and Taxideinae (American badger). 
 # A native or resident of the State of [[Wisconsin]] (US).
 # ''plural'' {{vulgar}} (''cant'') A crew of desperate villains who robbed near rivers, into which they threw the bodies of those they murdered.
 # A person who makes [http://www.weebadgers.com badges].
