--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -103,6 +103,7 @@ Middle English < Old English '''[[æt]]''' < Proto-Germanic '''*at''', '''*az'''
 *Japanese: [[に]] (ni)
 *[[Kurdish]]: Kurdish: [[li]] ([[Kurmanji]]), [[le]] ([[Soranî]])
 *Latin: ''[[ablative]] case''
+*Maltese: [[fi]]
 *[[Novial]]: [[ye]]
 *Polish: [[w#Polish|w]]
 *Portuguese: [[a#Portuguese|a]]
