--- a/en/w/weasel.8232.wikitext
+++ b/en/w/weasel.8232.wikitext
@@ -20,6 +20,7 @@ The word ''weasel'' is the direct descendant of Old English ''wesule'', ''wesle'
 
 ====Translations====
 {{trans-top|Mustela nivalis}}
+*Dutch: [[wezel]] {{f}}
 *Estonian: [[nirk]]
 *Finnish: [[lumikko]]
 {{trans-mid}}
