--- a/en/w/weasel.8232.wikitext
+++ b/en/w/weasel.8232.wikitext
@@ -30,6 +30,10 @@ The word ''weasel'' is the direct descendant of Old English ''wesule'', ''wesle'
 {{trans-top|any mammal of the genus Mustela}}
 {{trans-bottom}}
 
+{{trans-top|any mammal of the family Mustelidae}}
+*Finnish: [[näätäeläin]]
+{{trans-bottom}}
+
 {{checktrans}}
 {{trans-top|translations to be checked}}
 *{{ttbc|Albanian}}: [[nuse e lalës]]
