/* English */ + quote; cleanup <thing#2291623>

--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -7,9 +7,9 @@
 From Middle English, from Old English ''[[þing]]''.
 
 ===Pronunciation===
-*thĭng, /θɪŋ/, /TIN/
+*{{enPR|thĭng}}, {{IPA|/θɪŋ/}}, {{SAMPA|/TIN/}}
 *{{audio|en-us-thing.ogg|Audio (US)}}
-*:Rhymes: [[Rhymes:English:-ɪŋ|-ɪŋ]]
+*{{rhymes|ɪŋ}}
 
 ===Noun===
 {{Wikipedia}}
@@ -26,6 +26,10 @@ From Middle English, from Old English ''[[þing]]''.
 # In [[Scandinavian]] countries, a [[legislative]] or [[judicial]] [[assembly]].
 # ''(in certain fixed expressions)'' A [[problem]], [[dilemma]], or [[complicating]] [[factor]].
 # {{context|U.S. slang}} A [[penis]].
+
+====Quotations====
+*'''1611''' — [[w:King James Version of the Bible|King James Version of the Bible]], ''[[s:Bible (King James)/Luke|Luke]] 1:1''
+*:Forasmuch as many have taken in hand to set forth in order a declaration of those '''things''' which are most surely believed among us...
 
 ====Synonyms====
 *[[stuff]] ([[uncountable]] equivalent)
