trans unlink Esperanto <again#2295445>

--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -2,7 +2,7 @@
 
 {{rank|still|just|while|144|again|also|away|against}}
 
-=== Pronunciation ===
+===Pronunciation===
 *{{IPA|əˈgeɪn/, /əˈgɛn}}/}} {{SAMPA|/@"geIn/, /@"gEn/}}
 *{{audio|en-us-again.ogg|Audio (US)}}
 *:{{rhymes|eɪn}}
@@ -31,7 +31,7 @@
 *Czech: [[zase]], [[opět]], [[znova]]
 *Danish: [[igen]]
 *Dutch: [[opnieuw]], [[nogmaals]], [[weer]], [[wederom]]
-*[[Esperanto]]: [[denove]], [[ree]]
+*Esperanto: [[denove]], [[ree]]
 *Finnish: [[taas]], [[uudelleen]], [[jälleen]], [[toistamiseen]], [[vielä kerran]]
 *French: [[de nouveau]], [[encore]]
 *German: [[erneut]], [[noch einmal]], [[wieder]]
