/* Conjunction */ rm def #2: that's an adverb, and covered in its own section <though#2296586>

--- a/en/t/though.7361.wikitext
+++ b/en/t/though.7361.wikitext
@@ -19,19 +19,17 @@ Middle English [[þoȝ]], borrowed from a Scandinavian source such as Old Norse 
 *:Rhymes: [[Rhymes:English:-əʊ|-əʊ]]
 
 ===Conjunction===
-'''though'''
+'''though''' [[Category:English conjunctions]]
 
 # Despite the fact that; [[although]].
 #:'''''Though''' it’s risky, it’s worth taking the chance.''
-# [[however|However]].
-#:''I will not go there if I'm not secure, '''though'''.''
 
 ====Synonyms====
-*(1) [[although]], even though
-*(2) [[however]]
+* [[although]]
+* [[even though]]
 
 ==== Translations ====
-{{top}}
+{{trans-top|although}}
 *Danish: [[dog]]
 *Dutch: [[ondanks]], [[desondanks]]
 *Finnish: [[vaikka]]
@@ -39,14 +37,14 @@ Middle English [[þoȝ]], borrowed from a Scandinavian source such as Old Norse 
 *German: [[obwohl]]
 *Greek: [[έστω και αν]] (esto ke an), [[αν και]] (an ke), [[μολονότι]] (molonoti), [[καίτοι]] (keti)
 *Icelandic: [[þó]], [[þótt]]
+{{trans-mid}}
 *Indonesian: [[walau]], [[meski]]
-{{mid}}
 *Italian: [[anche]] [[se]]
 *Portuguese: [[apesar]] de
 *Romanian: [[desi]], de [[parca]]
 *Slovak: [[hoci]] 
 *Spanish: [[sin embargo]], [[a pesar de]]
-{{bottom}}
+{{trans-bottom}}
 
 ===Adverb===
 '''though'''
