--- a/en/t/though.7361.wikitext
+++ b/en/t/though.7361.wikitext
@@ -47,7 +47,7 @@ Middle English [[þoȝ]], borrowed from a Scandinavian source such as Old Norse 
 {{trans-bottom}}
 
 ===Adverb===
-'''though'''
+'''though''' [[Category:English adverbs]]
 
 # [[despite|Despite]] that; [[however]].
 #:''I will do it, '''though'''.''
