trans unlink Hindi, gender -[[quadrilatero]] ''m'' +[[quadrilatero]] {{m}}, trans unlink Hindi, trans unlink Irish <quadrilateral#2302874>

--- a/en/q/quadrilateral.4319.wikitext
+++ b/en/q/quadrilateral.4319.wikitext
@@ -1,9 +1,12 @@
 ==English==
+
 ===Etymology===
 : From {{L.}} ''[[quadrilaterus]]'' (1650), [[quadri-]] (four) + [[latus]] (side)
+
 ===Noun===
 {{Wikipedia}}
 '''quadritaleral'''
+
 # a [[polygon]] having four sides.
 
 ====Translations====
@@ -12,8 +15,8 @@
 *Finnish: [[nelikulmio]]
 *French: [[quadrilatère]]
 *German: [[Viereck]]
-*[[Hindi]]: [[चतुर्भुज]]
-*Italian: [[quadrilatero]] ''m''
+*Hindi: [[चतुर्भुज]]
+*Italian: [[quadrilatero]] {{m}}
 {{trans-mid}}
 *Hebrew: {{he-translation|מרובע|merubá}} {{m}}
 *Japanese: [[四辺形]] (shihenkei)
@@ -23,14 +26,15 @@
 
 ===Adjective===
 '''quadrilateral'''
+
 # having four sides.
 
 ====Translations====
 {{trans-top|having four sides}}
 *Dutch: [[vierhoekig]]
 *Hebrew: {{he-translation|מרובע|merubá}} {{m}}
-*[[Hindi]]: [[चतुर्भुजीय]]
-*[[Irish]]: [[ceathairshleasach]]
+*Hindi: [[चतुर्भुजीय]]
+*Irish: [[ceathairshleasach]]
 *Italian: [[quadrilatero]]
 {{trans-mid}}
 {{trans-bottom}}
