--- a/en/p/pledge.7357.wikitext
+++ b/en/p/pledge.7357.wikitext
@@ -11,6 +11,17 @@
 # To make a [[solemn]] [[promise]] (to do something).
 # To [[deposit]] something as a [[security]]; to [[pawn]].
 
+====Translations====
+{{trans-top|To make a solemn promise}}
+*Finnish: [[luvata]], [[sitoutua]]
+{{trans-mid}}
+{{trans-bottom}}
+
+{{trans-top|To deposit something as a security; to pawn}}
+*Finnish: [[pantata]]
+{{trans-mid}}
+{{trans-bottom}}
+
 ====Translations to be checked====
 {{checktrans}}
 *{{ttbc|French}}: [[promettre]]
@@ -28,6 +39,7 @@
 ====Translations====
 '''solemn promise'''
 {{top}}
+*Finnish: [[lupaus]]
 *Italian: [[giuramento]], [[promessa solenne]]
 *Português: [[promessa]] {{f}}
 {{mid}}
@@ -38,9 +50,17 @@
 
 '''security to payment'''
 {{top}}
+*Finnish: [[pantti]]
 *Italian: [[avallo]], [[garanzia]]
 {{mid}}
 *Telugu: [[తనఖా]] (tanakhaa)
+{{bottom}}
+
+
+'''A promise to abstain from drinking alcohol'''
+{{top}}
+*Finnish: [[raittiuslupaus]]
+{{mid}}
 {{bottom}}
 
 [[ang:pledge]]
