--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -1,10 +1,11 @@
 {{see|Thing}}
+{{wikipedia}}
 ==English==
 
 {{rank|got|let|world|194|thing|set|told|both}}
 
 ===Etymology===
-From Middle English, from Old English ''[[þing]]''.
+From {{ME.}}, from {{OE.}} ''[[þing]]''.
 
 ===Pronunciation===
 *{{enPR|thĭng}}, {{IPA|/θɪŋ/}}, {{SAMPA|/TIN/}}
@@ -12,7 +13,6 @@ From Middle English, from Old English ''[[þing]]''.
 *{{rhymes|ɪŋ}}
 
 ===Noun===
-{{Wikipedia}}
 '''thing''' (''plural:'' [[things]]; ''diminutives:'' [[thingy]] / [[thingie]], [[thingo]] [''Aus''])
 
 # That which is considered to [[exist]] as a [[separate]] [[entity]], [[quality]] or [[concept]].
