--- a/en/p/pajamas.4756.wikitext
+++ b/en/p/pajamas.4756.wikitext
@@ -18,6 +18,10 @@ From the [[Persian]] words {{FAchar|پايجامه}} ''pɑ jɑma'' meaning ''leg
 *[[pyjamas]] (''British'')
 
 ====Translations====
+{{trans-top|clothes for wearing to bed and sleeping in}}
+*Czech: [[pyžamo]] {{n}}
+{{trans-mid}}
+{{trans-bottom}}
 {{top}}
 *Bosnian: [[pidžama]] {{f}} {{s}}
 *Chinese: [[睡衣]] (shuì yī, lit. ''sleep clothing'')
