header -Conjugations +Conjugation, header -Synonym +Synonyms, header Synonyms to L4, header Expressions to L4 <rot#2307880>

--- a/en/r/rot.26064.wikitext
+++ b/en/r/rot.26064.wikitext
@@ -1,16 +1,16 @@
 {{see|Rot}}
-
 ==English==
+
 ===Pronunciation===
 [[w:General American|GenAm]] {{IPA|[ɹɑt]}}
 *{{audio|en-us-rot.ogg|Audio (US)}}
 
 *Rhymes: [[Rhymes:English:-ɒt|-ɒt]]
-===Verb===
 
+===Verb===
 '''to rot'''
 
-#to [[decay]], to become [[bad]]
+# to [[decay]], to become [[bad]]
 
 ====Translations====
 {{top}}
@@ -22,13 +22,16 @@
 *Spanish: [[pudrir]], [[podrir]]
 *Swedish: [[ruttna]]
 {{bottom}}
+
 [[Category:English intransitive verbs]]
 
 ----
 
 ==Catalan==
+
 ===Etymology===
 Latin [[ructus]]
+
 ===Noun===
 '''rot'''
 
@@ -39,45 +42,51 @@ Latin [[ructus]]
 ----
 
 ==Dutch==
+
 ===Adjective===
 '''rot''' ([[rotter]], [[rotst]])
 
-#[[rotten]], [[spoiled]], [[decayed]], [[putrid]]
-#[[rotten]], [[tedious]], [[unkind]], [[mean]]
+# [[rotten]], [[spoiled]], [[decayed]], [[putrid]]
+# [[rotten]], [[tedious]], [[unkind]], [[mean]]
+
 ===Noun===
 '''rot''' ''n'' (Plural: [[rotten]], diminutive: [[rotje]], plural diminutive: [[rotjes]])
 
-#rot, something [[rotten]], something [[rotting]]
-#a military term meaning a lineup of men: [[file]]
+# rot, something [[rotten]], something [[rotting]]
+# a military term meaning a lineup of men: [[file]]
 
 ===Verb===
 '''rot'''
 
-#singular conjugation of the verb ''[[rotten]]'': to rot
+# singular conjugation of the verb ''[[rotten]]'': to rot
 
-===Expressions===
-#''een oude rot'' means ''an old hand''
-#''rot op'' is a not so friendly way to say ''go away'' (i.e.: fuck off)
-#rot- can be put in front of nouns to give it a negative meaning. For example: ''rot[[weer]]'' = ''shitty weather'', ''die rot[[hond]]'' = ''that damn [[dog]]''
+====Expressions====
+# ''een oude rot'' means ''an old hand''
+# ''rot op'' is a not so friendly way to say ''go away'' (i.e.: fuck off)
+# rot- can be put in front of nouns to give it a negative meaning. For example: ''rot[[weer]]'' = ''shitty weather'', ''die rot[[hond]]'' = ''that damn [[dog]]''
 
 ----
 
 ==French==
+
 ===Noun===
 '''rot''' ''f''
 
 # [[belch]], [[burp]]
 
-===Synonym===
+====Synonyms====
 *[[renvoi]]
 
 ----
 
 ==German==
+
 ===Pronunciation===
 {{IPA|[ʁoːt]}}
+
 ===Etymology===
 Old High German ''[[rōt]]'', akin to Old Saxon ''rōd'', compare Dutch ''[[rood]]''
+
 ===Adjective===
 '''rot'''
 
@@ -100,8 +109,10 @@ Old High German ''[[rōt]]'', akin to Old Saxon ''rōd'', compare Dutch ''[[rood
 ----
 
 ==Old High German==
+
 ===Etymology===
 Common Germanic *''[[raudhaz]]'', whence also Old English ''[[rēad]]'', Old Norse ''[[rauðr]]''
+
 ===Adjective===
 '''rōt'''
 
@@ -112,8 +123,10 @@ Common Germanic *''[[raudhaz]]'', whence also Old English ''[[rēad]]'', Old Nor
 ----
 
 ==Swedish==
+
 ===Noun===
 '''rot'''
+
 # the part of a [[plant]] under the surface.
 # the part of a [[tooth]] extending into the [[bone]] holding the tooth in place
 # [[source]]
@@ -125,35 +138,38 @@ Common Germanic *''[[raudhaz]]'', whence also Old English ''[[rēad]]'', Old Nor
 # (''mathematics'') A designated [[node]] in a [[tree]].
 # (''computers'') [[root directory]]
 # (''philology'') A [[word]] from which another word is derived.
-====Conjugations====
-{| border=1 cellspacing=0 
-| bgcolor=#FFFFF0 colspan=5 align=center | '''Common''' 
-|- 
-|- bgcolor=#FFFFF0 align=center 
-! rowspan=2 | 
-| colspan=2 width=105 | ''Singular'' 
-| colspan=2 | ''Plural'' 
-|- bgcolor=#FFFFF0 align=center 
-| width=105 | ''Indefinite'' 
-| width=105 | ''Definite'' 
-| width=105 | ''Indefinite'' 
-|  width=105 | ''Definite'' 
-|- align=center 
-| width=105 bgcolor=#FFFFF0 | ''Nominative'' 
-| [[rot]] 
-| [[roten]] 
-| [[rötter]] 
-| [[rötterna]] 
-|- align=center 
-| width=105 bgcolor=#FFFFF0 | ''Genitive'' 
-| [[rots]] 
-| [[rotens]] 
-| [[rötters]] 
-| [[rötternas]] 
-|} 
+
+====Conjugation====
+{| border=1 cellspacing=0
+| bgcolor=#FFFFF0 colspan=5 align=center | '''Common'''
+|-
+|- bgcolor=#FFFFF0 align=center
+! rowspan=2 |
+| colspan=2 width=105 | ''Singular''
+| colspan=2 | ''Plural''
+|- bgcolor=#FFFFF0 align=center
+| width=105 | ''Indefinite''
+| width=105 | ''Definite''
+| width=105 | ''Indefinite''
+|  width=105 | ''Definite''
+|- align=center
+| width=105 bgcolor=#FFFFF0 | ''Nominative''
+| [[rot]]
+| [[roten]]
+| [[rötter]]
+| [[rötterna]]
+|- align=center
+| width=105 bgcolor=#FFFFF0 | ''Genitive''
+| [[rots]]
+| [[rotens]]
+| [[rötters]]
+| [[rötternas]]
+|}
+
 ====Synonyms====
 *[[källa]] (3)
 *[[nollställe]] (5)
+
 ====See also====
 *[[rötter]]
 
