--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -38,7 +38,7 @@ Old English ''[[þonne]]''
 *Esperanto: [[tiam]]
 *Finnish: [[silloin]] [[:fi:silloin|^]]
 *French: [[alors]], [[à]] [[cette]] [[époque]]-[[là]]
-*German: [[dann]]
+*German: [[dann]], [[damals]]
 *Greek: [[τότε]]
 *[[Kurdish]]: [[hingê]], [[wê]] [[dem]]ê, [[wî]] [[çax]]î, wî [[wext]]î, wê [[gav]]ê
 *Malay: [[pada masa yang sama]]
