--- a/en/b/badger.8231.wikitext
+++ b/en/b/badger.8231.wikitext
@@ -46,7 +46,7 @@
 *[[Galician]]: [[teixugo]] {{m}}, [[porco teixo]] {{m}}
 *German: [[Dachs]] {{m}}
 *Greek: [[ασβός]] {{m}}
-*Hebrew: [[גיריט|גִּירִיט]] {{f}}
+*Hebrew: [[גירית|גִּירִית]] {{f}}
 *Hungarian: [[borz]]
 *Icelandic: [[greifingi]] {{m}}
 *Irish: [[broc]] {{m}}
