robot  Adding: [[tr:itself]] <itself#2324312>

--- a/en/i/itself.7369.wikitext
+++ b/en/i/itself.7369.wikitext
@@ -32,4 +32,5 @@ The reflexive form of ''[[it]]'', the third person singular, neuter, personal pr
 [[simple:itself]]
 [[fi:itself]]
 [[ta:itself]]
+[[tr:itself]]
 [[zh:itself]]
