--- a/en/c/countdown.34096.wikitext
+++ b/en/c/countdown.34096.wikitext
@@ -10,12 +10,30 @@
 #(''Britain'') A long-running [[television]] [[game show]]
 
 ====Translations====
-*[[Chinese]]: [[倒數]]
-*[[Dutch]]: [[aftelling]] ''f''
-*[[German]]: [[Zeitkontrolle]] ''f'', Countdown ''m''
-*[[Portuguese]]: [[contagem regressiva]] ''f''
-*Russian: [[обратный осчет]] (obrátnyj otsčot) {{m}}
-*Slovene: [[odštevanje]] {{n}}
+{{trans-top|A count backward to the time of some event}}
+*Finnish: [[lähtölaskenta]]
+{{trans-mid}}
+{{trans-bottom}}
+
+{{trans-top|The acts of preparation carried out during this period}}
+{{trans-mid}}
+{{trans-bottom}}
+
+{{trans-top|A radio or television program counting down the top songs of a given week}}
+{{trans-mid}}
+{{trans-bottom}}
+
+=====Translations to be checked=====
+{{checktrans}}
+{{top}}
+*{{ttbc|Chinese}}: [[倒數]]
+*{{ttbc|Dutch}}: [[aftelling]] ''f''
+*{{ttbc|German}}: [[Zeitkontrolle]] ''f'', Countdown ''m''
+{{mid}}
+*{{ttbc|Portuguese}}: [[contagem regressiva]] ''f''
+*{{ttbc|Russian}}: [[обратный осчет]] (obrátnyj otsčot) {{m}}
+*{{ttbc|Slovene}}: [[odštevanje]] {{n}}
+{{bottom}}
 
 ===Intransitive verb===
 '''to countdown'''
