--- a/en/c/countdown.34096.wikitext
+++ b/en/c/countdown.34096.wikitext
@@ -1,13 +1,17 @@
 ==English==
+
 ===Noun===
 {{wikipedia}}
 '''countdown'''
+
 # A [[count]] [[backward]] to the [[time]] of some [[event]], especially the [[launch]] of a [[space]] [[vehicle]]
 # The acts of [[preparation]] carried out during this period
 # {{slang}} A radio or television program counting down the top songs of a given week, usually in reverse order and ending with the No. 1 song.
 
 ===Proper noun===
-#(''Britain'') A long-running [[television]] [[game show]]
+'''countdown'''
+
+# (''Britain'') A long-running [[television]] [[game show]]
 
 ====Translations====
 {{trans-top|A count backward to the time of some event}}
@@ -37,13 +41,14 @@
 
 ===Intransitive verb===
 '''to countdown'''
+
 # To [[recite]] a countdown
 
 ====Translations====
-*[[Chinese]]: [[倒數]]
-*[[Dutch]]: [[aftellen]]
-*[[German]]: [[rückwärts]] [[zählen]]
-*[[Portuguese]]: [[fazer]] a [[contagem regressiva]]
+*Chinese: [[倒數]]
+*Dutch: [[aftellen]]
+*German: [[rückwärts]] [[zählen]]
+*Portuguese: [[fazer]] a [[contagem regressiva]]
 
 [[Category:Time]]
 
