--- a/en/c/countdown.34096.wikitext
+++ b/en/c/countdown.34096.wikitext
@@ -17,12 +17,12 @@
 {{trans-top|A count backward to the time of some event}}
 *Finnish: [[lähtölaskenta]]
 {{trans-mid}}
-*Russian: [[обратный осчёт]] (obrátnyj otš'ót) {{m}}
+*Russian: [[обратный отсчёт]] (obrátnyj otš'ót) {{m}}
 {{trans-bottom}}
 
 {{trans-top|The acts of preparation carried out during this period}}
 {{trans-mid}}
-*Russian: [[обратный осчёт]] (obrátnyj otš'ót) {{m}}
+*Russian: [[обратный отсчёт]] (obrátnyj otš'ót) {{m}}
 {{trans-bottom}}
 
 {{trans-top|A radio or television program counting down the top songs of a given week}}
