--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -56,7 +56,7 @@ Middle English < Old English '''[[æt]]''' < Proto-Germanic '''*at''', '''*az'''
 *Irish: [[ag#Irish|ag]]
 *Italian: [[a#Italian|a]], [[in#Italian|in]]
 *Japanese: [[で]] (de), [[に]] (ni)
-*Korean: [[~에서]] (-eseo)
+*Korean: [[~에서]] (~eseo)
 *[[Kurdish]]: Kurdish: [[li]] ([[Kurmanji]]), [[le]] ([[Soranî]])
 *Latin: ''[[locative]] case''
 {{trans-mid}}
@@ -102,6 +102,7 @@ Middle English < Old English '''[[æt]]''' < Proto-Germanic '''*at''', '''*az'''
 {{trans-mid}}
 *Italian: [[a#Italian|a]]
 *Japanese: [[に]] (ni)
+*Korean: [[~에]] (~e)
 *[[Kurdish]]: Kurdish: [[li]] ([[Kurmanji]]), [[le]] ([[Soranî]])
 *Latin: ''[[ablative]] case''
 *Maltese: [[fi]]
