--- a/en/t/though.7361.wikitext
+++ b/en/t/though.7361.wikitext
@@ -38,7 +38,7 @@ Middle English [[þoȝ]], borrowed from a Scandinavian source such as Old Norse 
 {{trans-top|however}}
 *[[Dholuo]]: [[kata kamano]]
 *Dutch: [[echter]]
-*Finnish: [[huolimatta]]
+*Finnish: [[kuitenkin]]
 *French: [[néanmoins]]
 *Greek: [[εν τούτοις]] (en tutis), [[παρά ταύτα]] (para tafta), [[ωστόσο]] (ostoso)
 *Indonesian: [[bagaimanapun juga]]
