/* Translations */ rm Brithenig; does not meet CFI <vodka#2335376>

--- a/en/v/vodka.34100.wikitext
+++ b/en/v/vodka.34100.wikitext
@@ -15,11 +15,10 @@
 # A clear [[distil]]led [[alcoholic]] [[liquor]] made from [[grain]] [[mash]].
 
 ====Translations====
-{{top}}
+{{trans-top|clear distilled alcoholic liquor}}
 *Albanian: [[vodkë]] {{f}}
 *Basque: vodka
 *Bosnian: [[votka#Bosnian|votka]] {{f}}
-*Brithenig: [[fodka]] {{f}}
 *Bulgarian: [[водка]] (vódka) {{f}}
 *Catalan: vodka {{f}}
 *Chinese: [[伏特加酒]] (fú tè jiā jiǔ)
@@ -34,7 +33,7 @@
 *Irish: [[vodca]] {{m}}
 *Italian: vodka {{f}}
 *Japanese: [[ウオッカ]] (uokka)
-{{mid}}
+{{trans-mid}}
 *Korean: [[보드카]] bodeuka
 *Lithuanian: [[degtinė]] {{f}}
 *Norwegian: vodka {{c}}
@@ -52,9 +51,10 @@
 *Turkish: [[votka]]
 *Ukrainian: [[горілка]] {{f}} (horílka), [[водка]] (vódka) {{f}}
 *Yiddish: vodka {{m}}
-{{bottom}}
+{{trans-bottom}}
 
 ----
+
 ==Italian==
 {{wikipedia|lang=it}}
 ===Noun===
