--- a/en/b/break.6806.wikitext
+++ b/en/b/break.6806.wikitext
@@ -44,7 +44,7 @@
 #:''America has used many forms of torture to '''break''' their POWs.''
 #{{transitive}} To do that which is [[forbid]]den by (a rule or rules).
 #:''When you go to Vancouver, promise me you won't '''break''' the law.''
-#{{transitive}} (''gaming slang'') To [[design]] or make (a [[legal]] but [[unfair]] [[move]]).
+#{{transitive}} (''gaming slang'') To [[design]] or use a [[powerful]] (yet [[legal]]) strategy.
 #: ''Letting white have three extra queens would '''break''' chess.''
 #{{transitive}} {{media}} {{ergative}} to [[disclose]] or [[make known]] an item of [[news]] etc
 
