--- a/en/m/mega.34066.wikitext
+++ b/en/m/mega.34066.wikitext
@@ -37,10 +37,12 @@ From the prefix [[mega-]].
 ----
 
 ==Faroese==
+{{fo-conj-mega}}
 ===Verb===
 '''mega'''
 # [[must]], [[may]]
 
+{{-}}
 [[Category:Faroese verbs]]
 ----
 
