robot  Adding: [[ja:mundo]], [[sl:mundo]], [[tr:mundo]] <mundo#2344572>

--- a/en/m/mundo.4430.wikitext
+++ b/en/m/mundo.4430.wikitext
@@ -35,9 +35,12 @@ Latin ''[[mundus]]''
 [[it:mundo]]
 [[ky:mundo]]
 [[hu:mundo]]
+[[ja:mundo]]
 [[no:mundo]]
 [[pl:mundo]]
 [[pt:mundo]]
 [[ru:mundo]]
+[[sl:mundo]]
 [[fi:mundo]]
+[[tr:mundo]]
 [[zh:mundo]]
