robot  Adding: [[sv:advertisement]] <advertisement#2351277>

--- a/en/a/advertisement.4312.wikitext
+++ b/en/a/advertisement.4312.wikitext
@@ -87,6 +87,7 @@
 [[simple:advertisement]]
 [[sk:advertisement]]
 [[fi:advertisement]]
+[[sv:advertisement]]
 [[ta:advertisement]]
 [[vi:advertisement]]
 [[uk:advertisement]]
