--- a/en/w/weasel.8232.wikitext
+++ b/en/w/weasel.8232.wikitext
@@ -100,6 +100,7 @@ The word ''weasel'' is the direct descendant of Old English ''wesule'', ''wesle'
 {{trans-top|to weasel out of doing something}}
 *Finnish: [[lusmuilla]], [[kiemurrella]]
 {{trans-mid}}
+*Polish: [[wykręcić się]] 
 *Russian: [[увиливать]] (uvílivat') {{impf}}, [[увильнуть]] (uvil'nút') {{pf}}
 {{trans-bottom}}
 
