--- a/en/p/polecat.8236.wikitext
+++ b/en/p/polecat.8236.wikitext
@@ -9,6 +9,10 @@ Middle French ''[[pole]]'' [[hen]] + [[cat]] because of its fondness for poultry
 #a [[weasel]] like animal of the genus ''[[Mustela]]'', notably ''[[Mustela putorius]]''.
 #''(US regional):'' a [[skunk]]
 
+====Quotations====
+*'''1919,''' [[w:Ronald Firbank|Ronald Firbank]], ''Valmouth'', Duckworth, hardback edition, page 61
+*: By the little garden '''pergola''' open to the winds some fluttered peacocks were blotted nervelessly amid the dripping trees, their heads sunk back beneath their wings: while in the pergoda itself, like a fallen storm-cloud, lolled a negress, her levelled, '''polecat''' eyes semi-veiled by the nebulous alchemy of the rainbow.
+
 ====Translations====
 {{top}}
 *Albanian: [[qelbësi]]
