--- a/en/p/polecat.8236.wikitext
+++ b/en/p/polecat.8236.wikitext
@@ -11,7 +11,7 @@ Middle French ''[[pole]]'' [[hen]] + [[cat]] because of its fondness for poultry
 
 ====Quotations====
 *'''1919,''' [[w:Ronald Firbank|Ronald Firbank]], ''Valmouth'', Duckworth, hardback edition, page 61
-*: By the little garden '''pergola''' open to the winds some fluttered peacocks were blotted nervelessly amid the dripping trees, their heads sunk back beneath their wings: while in the pergoda itself, like a fallen storm-cloud, lolled a negress, her levelled, '''polecat''' eyes semi-veiled by the nebulous alchemy of the rainbow.
+*: By the little garden pergola open to the winds some fluttered peacocks were blotted nervelessly amid the dripping trees, their heads sunk back beneath their wings: while in the pergoda itself, like a fallen storm-cloud, lolled a negress, her levelled, '''polecat''' eyes semi-veiled by the nebulous alchemy of the rainbow.
 
 ====Translations====
 {{top}}
