--- a/en/t/though.7361.wikitext
+++ b/en/t/though.7361.wikitext
@@ -89,4 +89,5 @@ Middle English [[þoȝ]], borrowed from a Scandinavian source such as Old Norse 
 [[fi:though]]
 [[ta:though]]
 [[vi:though]]
+[[tr:though]]
 [[zh:though]]
