--- a/en/c/consume.34056.wikitext
+++ b/en/c/consume.34056.wikitext
@@ -1,4 +1,5 @@
 ==English==
+
 ===Etymology===
 From {{L.}} ''[[consumere]]''.
 
@@ -14,7 +15,7 @@ From {{L.}} ''[[consumere]]''.
 #* ''The power plant '''consumes''' 30 tons of coal per hour.''
 # {{transitive}} To [[eat]].
 #* ''Baby birds '''consume''' their own weight in food each day.''
-# {{transitive}} To [[occupy]] (one’s attention or thoughts). 
+# {{transitive}} To [[occupy]] (one’s attention or thoughts).
 #* ''Desire '''consumed''' him.''
 # {{transitive}} To [[destroy]] completely.
 #* ''The building was consumed by fire.''
@@ -63,7 +64,7 @@ From {{L.}} ''[[consumere]]''.
 {{trans-mid}}
 {{trans-bottom}}
 
-=====Translations to be categorised=====
+=====Translations to be checked=====
 {{checktrans}}
 *{{ttbc|Latin}}: [[consumere]]
 *{{ttbc|Spanish}}: [[consumir]]
