/* See also */ <anaclitism#3451353>

--- a/en/a/anaclitism.856469.wikitext
+++ b/en/a/anaclitism.856469.wikitext
@@ -10,8 +10,8 @@ In Freudian theory, by contrast, anaclitic (or anaclisis) refers to the relation
 * [[Breast fetishism]]
 * [[Foot fetishism]]
 * [[Shoe fetishism]]
-* [[Diaperism]]
-* [[Diaper lover]]
+* [[Paraphilic infantilism]]
+* [[Diaper fetishism]]
 
 {{Paraphilia}}
 
