/* Translations */ ttbc el - see also ferret <weasel#2365808>

--- a/en/w/weasel.8232.wikitext
+++ b/en/w/weasel.8232.wikitext
@@ -25,6 +25,7 @@ The word ''weasel'' is the direct descendant of Old English ''wesule'', ''wesle'
 *Estonian: [[nirk]]
 *Finnish: [[lumikko]]
 {{trans-mid}}
+*Greek: {{t|el|νυφίτσα|f|s}} (nifítsa)
 *Polish: [[łasica]] {{f}}
 *Russian: [[ласка]] (láska) {{f}}
 {{trans-bottom}}
@@ -54,7 +55,6 @@ The word ''weasel'' is the direct descendant of Old English ''wesule'', ''wesle'
 *{{ttbc|Friulian}}: [[bilite]]
 *{{ttbc|Galician}}: [[donicela]], [[denociña]]
 *{{ttbc|German}}: [[Wiesel]] {{n}}
-*{{ttbc|Greek}}: [[νυφίτσα]] (nifitsa) {{f}}, [[κουνάβι]] (kunavi) {{n}}
 *{{ttbc|Hungarian}}: [[menyét]]
 *{{ttbc|Icelandic}}: [[hreysiköttur]], [[vesla]]
 *{{ttbc|Irish}}: [[bláthnaid ghallda]]
