Reverted edits by [[Special:Contributions/216.102.80.205|216.102.80.205]] ([[User_talk:216.102.80.205|Talk]]); changed back to last version by [[User:RobotGMwikt|RobotGMwikt]] <blow#2369314>

--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -1,1 +1,246 @@
-me
+==English==
+
+[[Category:1000 English basic words]]
+===Etymology===
+{{OE.}} ''[[blawan]]'' "make an air current, sound a wind instrument" (past tense ''bleow'', pp. ''blawen''), from Proto-Germanic *''[[blæ-anan]]'', from Proto-Indo-European ''*[[bhle-]]'' "to swell, blow up".
+
+===Pronunciation===
+*{{IPA|/blɔʊ/}}, /bləʊ/
+*{{SAMPA|/'blOU/}}
+*{{audio|en-us-blow.ogg|Audio (US)}}
+*:Rhymes: [[Rhymes:English:-əʊ|-əʊ]]
+
+===Verb===
+[[Category:English irregular verbs]]
+{{en-verb|blows|blowing|blew|blown}}
+
+#{{intransitive}} To produce an [[air current]]
+#*'''Quotations'''
+#:'''Blow''', winds, and crack your cheeks! rage! '''blow'''! -- ''King Lear''
+#{{intransitive}} To be propelled by an [[air current]].
+#:''The leaves '''blow''' through the streets in the fall.''
+#{{intransitive}} To [[explode]]
+#:''Get away from that burning gas tank!  It's about to '''blow'''!''
+#{{intransitive}} {{slang}} To be very undesirable (see also [[suck]])
+#:''This '''blows'''!''
+#{{intransitive}} (''of a [[cetacean]]'') To [[exhale]] [[visibly]] through the [[spout]] the [[seawater]] it has taken in while [[feeding]].
+#:''There's nothing more thrilling to the whale watcher than to see a whale surface and '''blow'''.''
+#:''There she '''blows'''! (That is, "I see a whale spouting!")''
+#{{transitive}} To propel by an [[air current]].
+#:'''''Blow''' the dust off that book and open it up.''
+#{{transitive}} To [[squander]].
+#:''I managed to '''blow''' $1000 at blackjack in under an hour.''
+#{{transitive}} {{vulgar}} To [[fellate]].
+#:''Who did you have to '''blow''' to get those backstage passes?''
+#{{transitive}} To create or shape by blowing; as, ''to blow bubbles'', ''to blow glass''
+#{{transitive}} To [[leave]]
+#:''Let's '''blow''' this joint.''
+
+====Derived terms====
+*[[blow a kiss]]
+*[[glassblower]]
+
+====Translations====
+{{trans-top|produce an air current}} <!--1-->
+*Dutch: [[blazen]]
+*Português: [[assoprar]]
+*Finnish: [[puhaltaa]]
+*French: [[souffler]]
+*German: [[blasen]], [[pusten]], [[wehen]]
+*Hungarian: [[fúj]]
+*Korean: [[불다]] (bulda)
+{{trans-mid}}
+*Russian: [[дуть]]/[[дунуть]] (dut'/dúnut'), [[сморкаться]]/[[сморкнуться]] (smorkát's'a/smorknút's'a) (blow the nose)
+*Slovene: [[pihati]]
+*Vietnamese: [[thổi]]; [[phù]], [[phù phù]] (to blow on food)
+{{trans-bottom}}
+
+{{trans-top|be propelled by an air current}} <!--2-->
+*Finnish: [[puhaltua]]
+*German: [[wehen]] 
+*Korean: [[불리다]] (bullida)
+{{trans-mid}}
+*Vietnamese: [[bay]]
+{{trans-bottom}}
+
+{{trans-top|explode}} <!--3-->
+*Português: [[explodir]]
+*Dutch: [[springen]], [[ontploffen]]
+*Finnish: [[räjähtää]]
+*French: [[exploser]]
+*German: [[hochgehen]], [[in]] [[die]] [[Luft]] [[gehen]], [[explodieren]]
+*Hebrew: [[להתפוצץ]] (le'hitpotzetz)
+{{trans-mid}}
+*Korean: [[터지다]] (teojida) 
+*Russian: [[взрываться]]/[[взорваться]] (vzryvát's'a/vzorvát's'a), [[взлетать на воздух]]/[[взлететь на воздух]] (vzletát' na vózduχ/vzlet'ét' na vózduχ)
+*Vietnamese: [[nổ]]
+{{trans-bottom}}
+
+{{trans-top|be very undesirable}} <!--4-->
+*Finnish: [[olla]] [[syvä|syvältä]]
+*Korean: [[제기랄]] (jegiral) (''interjection'') 
+{{trans-mid}}
+*Vietnamese: [[tẽn tò]], [[tẽn]], [[thẹn thò]], [[thẹn]]
+{{trans-bottom}}
+
+{{trans-top|(of a cetacean) exhale visibly through the spout the seawater}} <!--5-->
+*Dutch: [[spuiten]]
+*Finnish: [[suihkuttaa]]
+*Korean: [[뿜다]] (ppumda) 
+{{trans-mid}}
+*Vietnamese: [[phun]] [[nước]]
+{{trans-bottom}}
+
+{{trans-top|propel by an air current}} <!--6-->
+*Dutch: [[blazen]]
+*Finnish: [[puhaltaa]]
+*German: [[blasen]], [[wegblasen]], [[fortblasen]], [[hinfortblasen]], [[pusten]], [[wegpusten]]
+*Korean: [[불다]] (bulda)
+{{trans-mid}}
+*Russian: [[сдувать]]/[[сдуть]] (sduvát'/sdut')
+*Vietnamese: [[thở]], [[thổi]]
+{{trans-bottom}}
+
+{{trans-top|squander}} <!--7-->
+*Finnish: [[tuhlata]], [[törsätä]]
+*Korean: [[날리다]] (nallida)
+{{trans-mid}}
+*Russian: [[продувать]]/[[продуть]] (produvát'/produt')
+*Vietnamese: [[xài phí]], [[phung phí]]
+{{trans-bottom}}
+
+{{trans-top|fellate}} <!--8-->
+*Finnish: [[ottaa]] [[suu|suihin]]
+*French: [[sucer]], [[tailler]] une [[pipe]]
+*Polish: [[robić loda]], [[lizać pałę]], [[obciągać loda]], [[obciągać fiuta]], [[obciągać chuja]]
+*Serbian:
+:*Cyrillic: [[пушити]]
+:*Roman: [[pušiti]] 
+{{trans-mid}}
+*Korean: [[아양떨다]] (ayang-tteolda) 
+{{trans-bottom}}
+
+{{trans-top|create or shape by blowing}} <!--9-->
+*Dutch: [[blazen]]
+*Finnish: [[puhaltaa]]
+*Hebrew: [[לנפח]] (le'nape'akh)
+{{trans-mid}}
+*Korean: [[불다]] (bulda)
+*Russian: [[выдувать]]/[[выдуть]] (vyduvát'/výdut')
+*Vietnamese: [[thổi]]
+{{trans-bottom}}
+
+{{trans-top|leave}} <!--10-->
+*Finnish: [[häipyä]]
+*Korean: [[그만두다]] (geuman-duda)
+{{trans-mid}}
+*Vietnamese: [[bỏ đi]], [[chuồn]]
+{{trans-bottom}}
+
+=====Translations to be checked=====
+{{checktrans}}
+{{trans-top|Translations to be categorized}}
+''intransitive meanings''
+*{{ttbc|Chinese}}: [[吹]]
+*{{ttbc|Esperanto}}: [[blovi]]
+*{{ttbc|Indonesian}}: [[tiup|meniup]], [[ledak|meledakkan]]
+*{{ttbc|Japanese}}: [[吹く]] ([[ふく]], fuku), [[爆発]]する ([[ばくはつ]]する, bakuhatsu-suru)
+*{{ttbc|Spanish}}: [[soplar]]
+*{{ttbc|Telugu}}: [[ఊదు]] (oodu), [[కొట్టుకొనిపోవు]] (koTTukonipOvu), [[వీచు]] (veecu)
+{{trans-bottom}}
+
+===Noun===
+{{en-noun}}
+
+# The act of [[striking]] or [[hit]]ting. <!--1-->
+#:''A fabricator is used to direct a sharp '''blow''' to the surface of the stone.''
+#:''During an exchange to end round 13, Duran landed a '''blow''' to the mid-section.''
+# An [[unfortunate]] [[occurrence]]. <!--2-->
+#:''A further '''blow''' to the group came in 1917 when Thomson died while canoeing in Algonquin Park.''
+# {{slang}} (''uncountable'') [[cocaine]] <!--3-->
+# A strong [[wind]]. <!--4-->
+#:''We're having a bit of a '''blow''' this afternoon.''
+# {{colloquial}} A chance to catch one’s breath. <!--5-->
+#:''The players were able to get a bit of a '''blow''' during the last timeout.''
+
+====Translations====
+{{trans-top| act of striking or hitting}}
+*Dutch: [[slag]] ''m''
+*Finnish: [[isku]]
+*French: [[coup]] ''m''
+*German: [[Schlag]] ''m''
+{{trans-mid}}
+*Italian: [[botta]] {{f}}
+*[[Telugu]]: [[దెబ్బ]]
+{{trans-bottom}}
+
+{{trans-top|unfortunate occurrence}}
+*Dutch: [[slag]] ''m'', [[tegenslag]] {{m}}
+*Finnish: [[takaisku]]
+*German: [[Rückschlag]] ''m''
+{{trans-mid}}
+*[[Telugu]]: [[దెబ్బ]] (2)
+{{trans-bottom}}
+
+{{trans-top|cocaine}}
+See: [[cocaine]]
+{{trans-bottom}}
+
+{{trans-top|strong wind}}
+*Finnish: [[puhuri]], [[kova]] [[tuuli]]
+*German: [[Böe]] ''f''
+{{trans-mid}}
+{{trans-bottom}}
+
+{{trans-top|chance to catch one’s breath}}
+*Finnish: [[hengähdystauko]], [[henki|henkeä]]
+{{trans-mid}}
+{{trans-bottom}}
+
+=====Translations to be checked=====
+{{checktrans}}
+{{trans-top|Translations to be categorized}}
+*{{ttbc|Esperanto}}: [[bato]], [[frapo]]
+{{trans-bottom}}
+
+===Related terms===
+{{top}}
+*[[blow away]]
+*[[blow job]]
+*[[blow off]]
+*[[blow up]]
+*[[blowup]]
+*[[blow out]]
+*[[blowout]]
+{{mid}}
+*[[blowhard]]
+*[[body blow]]
+*[[low blow]]
+*[[blow-by-blow]]
+*[[blower]]
+*[[blow it]]
+{{bottom}}
+
+===Anagrams===
+*[[bowl]]
+
+[[ar:blow]]
+[[de:blow]]
+[[el:blow]]
+[[es:blow]]
+[[fr:blow]]
+[[gl:blow]]
+[[ko:blow]]
+[[hy:blow]]
+[[io:blow]]
+[[it:blow]]
+[[hu:blow]]
+[[pl:blow]]
+[[ru:blow]]
+[[simple:blow]]
+[[fi:blow]]
+[[ta:blow]]
+[[vi:blow]]
+[[tr:blow]]
+[[uk:blow]]
+[[zh:blow]]
