--- a/en/g/grognard.855664.wikitext
+++ b/en/g/grognard.855664.wikitext
@@ -1,6 +1,6 @@
-'''Grognard''' (Fr. "grumbler") may mean:
+'''Grognard''' (Fr. "grumbler" from Fr. "grogner" 1. snarl 2. grunt 3. growl 4. grumble [râler] 5. gripe [râler] and Fr. "grognon" 1. grouch 2. curmudgeon) may mean:
 
-* [[Napoleon Bonaparte]]'s name for old veteran soldiers; specifically the Grenadiers of the Imperial Guard (Grenadiers à Pied de la Garde Impériale). (derived from the French: grogner : 1. snarl 2. grunt 3. growl 4. grumble (râler) 5. gripe (râler), and grognon : 1. grouch 2. curmudgeon)
+* [[Napoleon Bonaparte]]'s name for old veteran soldiers; specifically the Grenadiers of the Imperial Guard (Grenadiers à Pied de la Garde Impériale).
 * ''slang'' for someone who enjoys playing [[wargaming#Board wargaming|board wargames]]. This use is supposed to have been coined by John Young in the early 1970s while employed by [[Simulations Publications]], Inc.. Originally this term referred to the "old guard" of gamers who were playing tactical board games prior to 1969.
 * Inside the computer game development industry, the term '''grognard''' is used to name fans who will buy every game released in a certain genre of game ([[Real-time strategy|RTS]], [[Computer role-playing game|RPG]], etc...). These dedicated game players are often viewed as a blessing and a curse, as they will ensure a certain minimum level in sales, but they will also be the most critical of any mistakes or [[Computer bug|bugs]] in the game.
 * In the board game, [[role-playing game]], [[miniature wargaming]] and computer game genres, a grognard is an ultra-hardcore gamer, seeking reality and assembling detailed tables of probabilities and statistics.
