--- a/en/b/began.6789.wikitext
+++ b/en/b/began.6789.wikitext
@@ -15,7 +15,7 @@
 ====Translations====
 *[[Dutch]]: [[begon]]-->
 
-[[Category:English simple past forms]]
+[[Category:English irregular simple past forms]]
 
 [[el:began]]
 [[fr:began]]
