--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -34,8 +34,8 @@
 *[[windmill]]
 
 =====Translations=====
-'''grinding apparatus or the building housing it'''
-{{top}}
+{{trans-top|grinding apparatus or the building housing it}}
+*{{ar}}: {{ARchar|[[مطحنة]]}}
 *Croatian: [[mlin]] {{m}}
 *Dutch: [[molen]] {{m}}
 *Erzya: [[ведьгев]] (vedgev)
@@ -47,49 +47,47 @@
 *Greek: [[μύλος]] (mylos) 
 *Hungarian: [[malom]]
 *Italian: [[mulino]] {{m}}
-{{mid}}
+{{trans-mid}}
 *Korean: [[방아]] (bangA); [[방앗간]] (bangAsgan, BangAt-) (''for building'')
+*{{ku}}: {{KUchar|[[ئاش]]}}
 *Norwegian: [[mølle]] {{m}}
 *Polish: [[młyn]] {{m}}
 *Portuguese: [[moenda]] {{f}}, [[moinho]] {{m}}
 *Slovenian: [[mlin]] {{m}}
 *Spanish: [[molino]] {{m}}
 *Turkish: [[değirmen]]
-{{bottom}}
+{{trans-bottom}}
 
-'''manufacturing plant'''
-{{top}}
+{{trans-top|manufacturing plant}}
 *Dutch: [[fabriek]] {{f}} (''general''), [[papierfabriek]] {{f}} (''for paper''), [[staalfabriek]] (''for steel'') [[textielfabriek]] (''for textiles'')
 *Finnish: [[tehdas]]
 *French: [[manufacture]] {{f}}
 *German: [[Fabrik]] {{f}} (''general''), [[Werk]] {{n}} (''general'') [[Papiermühle]] {{f}} (''for paper'')
-{{mid}}
+{{trans-mid}}
 *Norwegian: [[mølle]] {{m}}
 *Polish: [[fabryka]] {{f}}
 *Portuguese: [[fábrica]] {{f}}, [[manufatura]] {{f}}
 *Spanish: [[fabrica]] {{f}}
 *Turkish: [[fabrika]]
-{{bottom}}
+{{trans-bottom}}
 
-'''building'''
-{{top}}
+{{trans-top|building}}
 *Dutch: [[fabriek]] {{f}} (''general''), [[papierfabriek]] {{f}} (''for paper''), [[staalfabriek]] (''for steel'') [[textielfabriek]] (''for textiles'')
 *Finnish: [[tehdas]], [[tehdasrakennus]]
 *French: [[manufacture]] {{f}}
 *German: [[Fabrik]] {{f}} (''general''), [[Werk]] {{n}} (''general'') [[Papiermühle]] {{f}} (''for paper'')
-{{mid}}
+{{trans-mid}}
 *Norwegian}}: [[mølle]] {{m}}, [[fabrikk]] {{m}} (''general'')
 *Polish: [[fabryka]] {{f}}
 *Spanish: [[fabrica]] {{f}}
 *Turkish: [[bina]], [[yapı]]
-{{bottom}}
+{{trans-bottom}}
 
-'''establishment that handles a certain type of situation routinely'''
-{{top}}
+{{trans-top|establishment that handles a certain type of situation routinely}}
 *Dutch: [[papiermolen]] (~ burocracy)
-{{mid}}
+{{trans-mid}}
 *Norwegian}}: [[papirmølle]] {{m}}(~ burocracy)
-{{bottom}}
+{{trans-bottom}}
 
 ======Translations to be checked======
 {{checktrans}}
