--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -125,29 +125,25 @@ From the noun ''mill''
 *(''move about in an aimless fashion''): [[roam]], [[wander]]
 
 =====Translations=====
-'''grind or process using a mill or other machine'''
-{{top}}
+{{trans-top|grind or process using a mill or other machine}}
 *Dutch: [[malen]]
 *Finnish: [[jauhaa]]
-{{mid}}
-{{bottom}}
+{{trans-mid}}
+{{trans-bottom}}
 
-'''shape, polish, etc, using a machine'''
-{{top}}
+{{trans-top|shape, polish, etc, using a machine}}
 *Dutch: [[slijpen]]
-{{mid}}
-{{bottom}}
+{{trans-mid}}
+{{trans-bottom}}
 
-'''engrave groove around the edge of'''
-{{top}}
+{{trans-top|engrave groove around the edge of}}
 *Dutch: [[graveren]]
-{{mid}}
-{{bottom}}
+{{trans-mid}}
+{{trans-bottom}}
 
-'''move about in an aimless fashion'''
-{{top}}
-{{mid}}
-{{bottom}}
+{{trans-top|move about in an aimless fashion}}
+{{trans-mid}}
+{{trans-bottom}}
 
 ===References===
 {{R:Century 1911}}
