--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -1,4 +1,4 @@
-''See also'' '''[[At]], [[åt]], [[ät]], [[át]], [[-ât]]'''
+''See also'' '''[[At]], [[åt]], [[ät]], [[át]], [[-ât]], [[.at]]'''
 {{wikipedia|AT}}
 ==English==
 
