/* Translations */ Portuguese translation <countdown#2380577>

--- a/en/c/countdown.34096.wikitext
+++ b/en/c/countdown.34096.wikitext
@@ -21,6 +21,7 @@
 {{trans-bottom}}
 
 {{trans-top|The acts of preparation carried out during this period}}
+*Portuguese: [[contagem regressiva]], [[retrocontagem]] {{f}}
 {{trans-mid}}
 *Russian: [[обратный отсчёт]] (obrátnyj otš'ót) {{m}}
 {{trans-bottom}}
@@ -36,7 +37,6 @@
 *{{ttbc|Dutch}}: [[aftelling]] ''f''
 *{{ttbc|German}}: [[Zeitkontrolle]] ''f'', Countdown ''m''
 {{mid}}
-*{{ttbc|Portuguese}}: [[contagem regressiva]] ''f''
 *{{ttbc|Slovene}}: [[odštevanje]] {{n}}
 {{bottom}}
 
