--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -1,5 +1,5 @@
-==English==
 {{wikipedia}}
+==English==
 
 ===Pronunciation===
 *{{IPA|/pɪg/}}
@@ -189,7 +189,7 @@
 {{mid}}
 {{bottom}}
 
-===Compound terms===
+===Derived terms===
 {{top3}}
 *[[blind pig]]
 *[[bush pig]]
@@ -227,17 +227,24 @@
 ----
 
 ==Danish==
+
 ===Noun===
 '''pig'''
+
 #[[thorn]]
+
 ----
+
 ==Torres Strait Creole==
+
 ===Etymology===
 From English ''[[pig#English|pig]]''.
+
 ===Noun===
 '''pig'''
 
 # [[pig#English|pig]]
+
 ===Synonyms===
 *[[pwaka]]
 
