--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -83,6 +83,7 @@
 {{mid}}
 *Japanese: [[豚]] ([[ぶた]], buta)
 *Korean: [[돼지]] (dwaeji)
+*Kurdish: {{KUchar|[[به‌راز]]}}
 *[[Ladin]]: [[porcel]]
 *Latin: [[sus]], [[porcus]] <!--do not put the scientific name here-->
 *Latvian: [[cūka]] {{f}}
