--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -36,6 +36,7 @@ Old English ''[[stæf]]''
 '''a series of horizontal lines'''
 {{top}}
 *Dutch: [[balk]] ''m'', [[notenbalk]] ''m''
+*Finnish: [[nuottiviivasto]]
 *French: [[portée]] ''f''
 {{mid}}
 *German: [[Notenlinien]] ''f'' ''pl''
