--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -73,6 +73,7 @@ Old English [[īġland]].  The S was added by confusion with French ''[[isle]]''
 *Romanian: [[insulã]] {{f}}, [[insule]] {{p}}
 *Russian: [[остров]] (óstrov) {{m}}, [[острова]] (ostrová) {{p}}
 *Sardinian: [[isula]] {{f}}
+*Scandinavian: [[holm]]
 *[[Scottish Gaelic]]: [[eilean]] ''m'', [[innis]] ''f (less common)''
 *Serbian
 :Cyrillic: [[острво#Serbian|острво]] {{n}}
