--- a/en/b/break.6806.wikitext
+++ b/en/b/break.6806.wikitext
@@ -1,6 +1,6 @@
 {{wikipedia}}
 ==English==
- 
+
 {{rank|authority|pleasant|forget|862|break|Roman|wise|watch}}
 
 ===Etymology===
@@ -15,36 +15,35 @@
 *[[brake]]
 
 ===Verb===
-[[Category:English irregular verbs]]
 {{en-verb|breaks|breaking|broke|broken}}
 
-#{{intransitive}} To [[end up]] in two or more [[piece]]s that can't easily be [[reassemble]]d.
+# {{intransitive}} To [[end up]] in two or more [[piece]]s that can't easily be [[reassemble]]d.
 #: ''If the vase falls to the floor, it might '''break'''.''
-#{{intransitive}} {{medicine}} Of a [[bone]], to [[crack]] or [[fracture]] through a [[sudden]] [[physical]] [[strain]], such as a [[collision]].
+# {{intransitive}} {{medicine}} Of a [[bone]], to [[crack]] or [[fracture]] through a [[sudden]] [[physical]] [[strain]], such as a [[collision]].
 #:''Don't slip and '''break''' your leg.''
-#{{intransitive}} To [[stop]] [[function]]ing [[properly]] or [[altogether]].
+# {{intransitive}} To [[stop]] [[function]]ing [[properly]] or [[altogether]].
 #:''Don't '''break''' the fridge with your tools.''
-#{{intransitive}} To [[interrupt]] or [[cease]] one's [[work]] or [[occupation]] [[temporarily]].
+# {{intransitive}} To [[interrupt]] or [[cease]] one's [[work]] or [[occupation]] [[temporarily]].
 #:''Let's '''break''' for lunch.''
-#{{intransitive}} {{tennis}} To win a game as [[receiver]].
-#{{intransitive}} {{billiards}} To make the [[first]] [[shot]].
+# {{intransitive}} {{tennis}} To win a game as [[receiver]].
+# {{intransitive}} {{billiards}} To make the [[first]] [[shot]].
 #:''Is it your or my turn to '''break'''?''
-#{{transitive}} To [[cause]] to [[end up]] in two or more [[piece]]s.
+# {{transitive}} To [[cause]] to [[end up]] in two or more [[piece]]s.
 #: ''I am going to '''break''' your mask.''
-#{{transitive}} {{medicine}} {{ergative}} Of a bone, to cause to [[crack]] under [[physical]] [[strain]].
+# {{transitive}} {{medicine}} {{ergative}} Of a bone, to cause to [[crack]] under [[physical]] [[strain]].
 #:''Don't try to '''break''' his neck.''
-#{{transitive}} {{medicine}} {{ergative}} Of a bone, to [[fracture]] accidentally.
+# {{transitive}} {{medicine}} {{ergative}} Of a bone, to [[fracture]] accidentally.
 #:''Don't '''break''' your fingers playing basketball.''
-#{{transitive}} {{ergative}} To cause to [[malfunction]] or [[stop]] [[work]]ing altogether.
+# {{transitive}} {{ergative}} To cause to [[malfunction]] or [[stop]] [[work]]ing altogether.
 #:''Did you two '''break''' the trolley by racing with it?''
-#{{transitive}} To cause a person or animal to [[lose]] his/her/its [[will]], usually obtained by means of [[torture]].
+# {{transitive}} To cause a person or animal to [[lose]] his/her/its [[will]], usually obtained by means of [[torture]].
 #:''You have to '''break''' an elephant before you can use it as an animal of burden.''
 #:''America has used many forms of torture to '''break''' their POWs.''
-#{{transitive}} To do that which is [[forbid]]den by (a rule or rules).
+# {{transitive}} To do that which is [[forbid]]den by (a rule or rules).
 #:''When you go to Vancouver, promise me you won't '''break''' the law.''
-#{{transitive}} (''gaming slang'') To [[design]] or use a [[powerful]] (yet [[legal]]) strategy that unbalances the game in a player's favor.
+# {{transitive}} (''gaming slang'') To [[design]] or use a [[powerful]] (yet [[legal]]) strategy that unbalances the game in a player's favor.
 #: ''Letting white have three extra queens would '''break''' chess.''
-#{{transitive}} {{media}} {{ergative}} to [[disclose]] or [[make known]] an item of [[news]] etc
+# {{transitive}} {{media}} {{ergative}} to [[disclose]] or [[make known]] an item of [[news]] etc
 
 ====Synonyms====
 *(''intransitive: end up in two or more pieces''): [[burst]], [[bust]], [[shatter]], [[shear]], [[smash]], [[split]]
@@ -90,8 +89,7 @@
 ''See also'' '''[[breaking]]''', '''[[broke]]''' ''and'' '''[[broken]]'''
 
 ====Translations====
-'''intransitive: end up in two or more pieces that cannot easily be reassembled'''
-{{top}}
+{{trans-top|intransitive: end up in two or more pieces that cannot easily be reassembled}}
 *Danish: gå i [[stykke]]r, gå [[itu]]
 *Dutch: [[breken]]
 *Esperanto: [[rompi]]
@@ -101,7 +99,7 @@
 *Hebrew: [[להישבר]] (le'hishaver)
 *Hungarian: [[törik]], [[eltörik]]
 *Japanese: [[割れる]] (wareru), [[散らばる]] (chirabaru)
-{{mid}}
+{{trans-mid}}
 *Korean: [[부러지다]] (bureojida)
 *Portuguese: [[quebrar]], [[partir]], [[romper]] (if flexible material)
 *Romanian: a (se) [[frânge]], a (se) [[rupe]]
@@ -109,11 +107,10 @@
 *Slovene: [[zlomiti se]] (two pieces), [[razbiti se]] (more pieces)
 *Spanish: [[romper]]
 *Swedish: [[gå sönder]]
-*Telugu: [[విరుచు]] (virucu), [[విరగగొట్టు]] (viragagoTTu) 
-{{bottom}}
+*Telugu: [[విరుచు]] (virucu), [[విరగగొట్టు]] (viragagoTTu)
+{{trans-bottom}}
 
-'''intransitive: of a bone'''
-{{top}}
+{{trans-top|intransitive: of a bone}}
 *Danish: [[brække]]
 *Dutch: [[breken]]
 *Esperanto: [[panei]]
@@ -122,7 +119,7 @@
 *German: [[brechen]]
 *Hebrew: [[להישבר]] (le'hishaver)
 *Hungarian: [[eltörik]]
-{{mid}}
+{{trans-mid}}
 *Italian: [[rompere]]
 *Japanese: [[ひびが入る]] (hibi-ga-hairu), [[折れる]] (oreru)
 *Korean: [[부러지다]] (bureojida)
@@ -131,10 +128,9 @@
 *Russian: [[ломаться]]/[[сломаться]] (lomát's'a/slomát's'a)
 *Slovene: [[zlomiti se]]
 *Swedish: [[brytas]]
-{{bottom}}
+{{trans-bottom}}
 
-'''intransitive: stop functioning properly or altogether'''
-{{top}}
+{{trans-top|intransitive: stop functioning properly or altogether}}
 *Danish: gå i [[stykke]]r, gå [[itu]]
 *Dutch: [[stukgaan]], [[kapotgaan]]
 *Finnish: [[hajota]], [[mennä]] [[rikki]]
@@ -143,7 +139,7 @@
 *Hebrew: [[להתקלקל]] (le'hitqalqel)
 *Hungarian: [[elromlik]]
 *Japanese: [[壊れる]] (kowareru)
-{{mid}}
+{{trans-mid}}
 *Korean: [[부서지다]] (buseojida)
 *Portuguese: [[quebrar]], [[partir]]
 *Russian: [[ломаться]]/[[сломаться]] (lomát's'a/slomát's'a)
@@ -151,39 +147,35 @@
 *Swedish: [[gå sönder]]
 *Swahili: [[kuvunjika]]
 *Telugu: [[చెడిపోవు]] (ceDipOvu)
-{{bottom}}
+{{trans-bottom}}
 
-'''intransitive: interrupt or cease one's work or occupation temporarily'''
-{{top}}
+{{trans-top|intransitive: interrupt or cease one's work or occupation temporarily}}
 *Danish: holde [[pause]]
 *Dutch: [[pauzeren]]
 *Finnish: [[pitää]] [[tauko]]
 *Japanese: [[休憩する]] (kyūkei-suru)
-{{mid}}
+{{trans-mid}}
 *Korean: [[쉬다]] (swida)
 *Portuguese: [[pausar]]
 *Russian: [[делать]]/[[сделать]] [[перерыв]] (d'élat'/sd'élat' p'er'erýv)
 *Swedish: [[avbryta]], [[bryta]]
-{{bottom}}
+{{trans-bottom}}
 
-'''intransitive: tennis'''
-{{top}}
+{{trans-top|intransitive: tennis}}
 *Danish: [[bryde]]
 *Japanese: [[ブレークを取る]] (burēku-wo-toru)
-{{mid}}
+{{trans-mid}}
 *Korean: [[쉬다]] (swida)
-{{bottom}}
+{{trans-bottom}}
 
-'''intransitive: billiards'''
-{{top}}
+{{trans-top|intransitive: billiards}}
 *Japanese: [[ブレークする]] (burēku-suru)
 *Korean: [[쉬다]] (swida)
-{{mid}}
+{{trans-mid}}
 *Swedish: [[spränga]]
-{{bottom}}
+{{trans-bottom}}
 
-'''transitive: cause to end up in two or more pieces'''
-{{top}}
+{{trans-top|transitive: cause to end up in two or more pieces}}
 *Albanian: [[thyen]]
 *Catalan: [[trencar]]
 *Croatian: [[lomiti]]
@@ -195,7 +187,7 @@
 *German: [[brechen]]
 *Guaraní: [[joka]]
 *Hebrew: [[לשבור]] (lishbor)
-{{mid}}
+{{trans-mid}}
 *Hungarian: [[tör]], [[eltör]]
 *Irish: [[bris]]
 *Italian: [[rompere]]
@@ -207,10 +199,9 @@
 *Slovene: [[zlomiti]] (two pieces), [[razbiti]] (more pieces)
 *Spanish: [[romper]], [[quebrar]]
 *Swedish: [[bryta]], [[ta sönder]] (''deliberately''), [[ha sönder]] (''involunterally'') (''familiar''), [[slå sönder]] (''violently'')
-{{bottom}}
+{{trans-bottom}}
 
-'''transitive: of a bone, intentionally'''
-{{top}}
+{{trans-top|transitive: of a bone, intentionally}}
 *Danish: [[brække]]
 *Dutch: [[breken]]
 *Finnish: [[murtaa]], [[katkaista]], [[taittaa]]
@@ -218,7 +209,7 @@
 *German: [[brechen]]
 *Hebrew: [[לשבור]] (lishbor)
 *Hungarian: [[eltör]]
-{{mid}}
+{{trans-mid}}
 *Japanese: [[ひびが入る]] (hibi-ga-hairu), [[折れる]] (oreru)
 *Korean: [[부러뜨리다]] (bureotteurida)
 *Portuguese: [[quebrar]], [[partir]]
@@ -226,10 +217,9 @@
 *Russian: [[ломать]]/[[сломать]] (lomát'/slomát')
 *Slovene: [[zlomiti]]
 *Swedish: [[bryta]]
-{{bottom}}
+{{trans-bottom}}
 
-'''transitive: of a bone, accidentally'''
-{{top}}
+{{trans-top|transitive: of a bone, accidentally}}
 *Danish: [[brække]]
 *Dutch: [[breken]]
 *Finnish: [[murtaa]], [[katkaista]], [[taittaa]]
@@ -237,17 +227,16 @@
 *German: [[brechen]]
 *Hebrew: [[לשבור]] (lishbor)
 *Hungarian: [[eltör]]
-{{mid}}
+{{trans-mid}}
 *Japanese: [[ひびが入る]] (hibi-ga-hairu), [[折れる]] (oreru)
 *Korean: [[부러뜨리다]] (bureotteurida)
 *Portuguese: [[quebrar]], [[partir]]
 *Russian: [[ломать]]/[[сломать]] (lomát'/slomát')
 *Slovene: [[zlomiti]]
 *Swedish: [[bryta]]
-{{bottom}}
+{{trans-bottom}}
 
-'''transitive: cause to malfunction'''
-{{top}}
+{{trans-top|transitive: cause to malfunction}}
 *Danish: [[ødelægge]], [[smadre]]
 *Dutch: [[kapotmaken]]
 *Finnish: [[rikkoa]], [[särkeä]]
@@ -255,7 +244,7 @@
 *German: [[kaputtmachen]]
 *Hebrew: [[לשבור]] (lishbor)
 *Hungarian: [[elront]]
-{{mid}}
+{{trans-mid}}
 *Japanese: [[壊す]] (kowasu), [[破壊する]] (hakai-suru)
 *Korean: [[부수다]] (busuda)
 *Portuguese: [[estragar]], [[partir]]
@@ -263,10 +252,9 @@
 *Slovene: [[pokvariti]]
 *Swedish: [[ha sönder]], [[ta sönder]]
 *Swahili: [[kuvunja]]
-{{bottom}}
+{{trans-bottom}}
 
-'''transitive: cause a person or animal to lose his/her/its will'''
-{{top}}
+{{trans-top|transitive: cause a person or animal to lose his/her/its will}}
 *Danish: [[knække]], [[knuse]]
 *Dutch: [[breken]]
 *Finnish: [[kesyttää]], [[murtaa]], [[nujertaa]]
@@ -274,17 +262,16 @@
 *German: [[brechen]]
 *Hebrew: [[לשבור]] (lishbor)
 *Hungarian: [[elkedvtelenít]]
-{{mid}}
+{{trans-mid}}
 *Japanese: [[壊す]] (kowasu), [[破壊する]] (hakai-suru)
 *Korean: [[꺾다]] (kkeokkda)
 *Portuguese: [[quebrar]]
 *Russian: [[ломать]]/[[сломать]] (lomát'/slomát')
 *Slovene: [[zlomiti]]
 *Swedish: [[bryta ned]]
-{{bottom}}
+{{trans-bottom}}
 
-'''transitive: do that which is forbidden by (a rule or rules)'''
-{{top}}
+{{trans-top|transitive: do that which is forbidden by (a rule or rules)}}
 *Danish: [[bryde]], [[krænke]]
 *Dutch: [[breken]], [[overtreden]]
 *Finnish: [[rikkoa]]
@@ -292,7 +279,7 @@
 *German: [[brechen]]
 *Hebrew: [[להפר]] (le'hafer)
 *Hungarian: [[megszeg]]
-{{mid}}
+{{trans-mid}}
 *Japanese: [[破る]] (yaburu), [[犯す]] (okasu)
 *Korean: [[깨다]] (kkaeda)
 *Portuguese: [[desrespeitar]], [[violar]]
@@ -300,20 +287,18 @@
 *Slovene: [[prekršiti]]
 *Swedish: [[bryta]]
 *Telugu: [[అతిక్రమించు]] (atikramiMcu), [[మీరు]] (meeru)(హద్దుమీరు)
-{{bottom}}
+{{trans-bottom}}
 
-'''transitive: gaming slang: to design or make (a legal but unfair move)'''
-{{top}}
+{{trans-top|transitive: gaming slang: to design or make (a legal but unfair move)}}
 *Danish: [[ødelægge]]
-{{mid}}
+{{trans-mid}}
 *Korean: [[잔꾀부리다]] (jankkoe-burida)
-{{bottom}}
+{{trans-bottom}}
 
-'''transitive: media: to disclose or make known an item of news etc'''
-{{top}}
+{{trans-top|transitive: media: to disclose or make known an item of news etc}}
 *Korean: [[까발리다]] (kkaballida)
-{{mid}}
-{{bottom}}
+{{trans-mid}}
+{{trans-bottom}}
 
 =====Translations to be checked=====
 <!--Remove this section once all of the translations below have been moved into the tables above.-->
@@ -328,16 +313,16 @@
 ===Noun===
 {{en-noun}}
 
-#{{countable}} An instance of breaking something into two pieces.
+# {{countable}} An instance of breaking something into two pieces.
 #:''The femur has a clean '''break''' and so should heal easily.''
-#{{countable}} A [[physical]] [[space]] that [[open up|opens up]] in something or between two things.
+# {{countable}} A [[physical]] [[space]] that [[open up|opens up]] in something or between two things.
 #:''The sun came out in a '''break''' in the clouds.''
-#{{countable}} A [[rest]] or [[pause]], usually from [[work]].
+# {{countable}} A [[rest]] or [[pause]], usually from [[work]].
 #:''Let’s take a five-minute '''break'''.''
-#{{countable}} {{tennis}} (''tennis'') A [[game]] won by the [[receive|receiving]] [[player]] or players (in case of a [[double]]).
-#{{countable}} {{billiards}} The first [[shot]] in a game of [[billiards]]
-#{{countable}} {{snooker}} The number of points scored by one player in one visit to the table
-#{{countable}} {{surfing}} Place where [[wave]]s break (ie. pitch or spill forward creating white water).
+# {{countable}} {{tennis}} (''tennis'') A [[game]] won by the [[receive|receiving]] [[player]] or players (in case of a [[double]]).
+# {{countable}} {{billiards}} The first [[shot]] in a game of [[billiards]]
+# {{countable}} {{snooker}} The number of points scored by one player in one visit to the table
+# {{countable}} {{surfing}} Place where [[wave]]s break (ie. pitch or spill forward creating white water).
 #: 2005: ''The final '''break''' in the Greenmount area is Kirra Point.'' &mdash; coolangatta.net [http://www.coolangatta.net/coolangatta/surfbreaks.html]
 
 ====Synonyms====
@@ -357,62 +342,56 @@
 *[[take a break]]
 
 ====Translations====
-'''instance of breaking something into two pieces'''
-{{top}}
-*German: [[Bruch]] ''m''
-*Hebrew: [[שבירה]] (shvira) ''f''
-{{mid}}
-*Swedish: [[brott]] ''n''
-{{bottom}}
+{{trans-top|instance of breaking something into two pieces}}
+*German: [[Bruch]] {{m}}
+*Hebrew: [[שבירה]] (shvira) {{f}}
+{{trans-mid}}
+*Swedish: [[brott]] {{n}}
+{{trans-bottom}}
 
-'''physical space that opens up in something or between two things'''
-{{top}}
+{{trans-top|physical space that opens up in something or between two things}}
 *French: [[espace]] {{m}}, [[ouverture]] {{f}}
-*German: [[Öffnung]] ''f'', [[Spalt]] ''m''
-{{mid}}
+*German: [[Öffnung]] {{f}}, [[Spalt]] {{m}}
+{{trans-mid}}
 *Russian: [[разлом]] (razlóm)
 *Japanese: [[割れ目]] (wareme), [[隙間]] (sukima)
-{{bottom}}
+{{trans-bottom}}
 
-'''rest or pause, usually from work'''
-{{top}}
+{{trans-top|rest or pause, usually from work}}
 *Esperanto: [[paŭzi]]
 *Finnish: [[tauko]]
-*French: [[pause#French|pause]] ''f''
-*German: [[Pause#German|Pause]] ''f''
-*Italian: [[pausa#Italian|pausa]] ''f''
-{{mid}}
+*French: [[pause#French|pause]] {{f}}
+*German: [[Pause#German|Pause]] {{f}}
+*Italian: [[pausa#Italian|pausa]] {{f}}
+{{trans-mid}}
 *Japanese: [[休憩]] (kyūkei)
 *Polish: [[przerwa]]
 *Russian: [[перерыв]] (p'e'rerýv)
 *Slovenian: [[odmor]]
-*Swedish: [[avbrott]] ''n'', [[rast]] ''c'', [[paus]] ''c''
-{{bottom}}
+*Swedish: [[avbrott]] {{n}}, [[rast]] {{c}}, [[paus]] {{c}}
+{{trans-bottom}}
 
-'''in tennis'''
-{{top}}
-*German: [[Break#German|Break]] ''n''
+{{trans-top|in tennis}}
+*German: [[Break#German|Break]] {{n}}
 *Japanese: [[ブレーク]] (burēku)
-{{mid}}
-*Swedish: [[break#Swedish|break]] ''n''
-{{bottom}}
+{{trans-mid}}
+*Swedish: [[break#Swedish|break]] {{n}}
+{{trans-bottom}}
 
-'''in billiards'''
-{{top}}
+{{trans-top|in billiards}}
 *Japanese: [[ブレーク]] (burēku)
-{{mid}}
-{{bottom}}
+{{trans-mid}}
+{{trans-bottom}}
 
-'''in snooker'''
-{{top}}
-{{mid}}
-{{bottom}}
+{{trans-top|in snooker}}
+{{trans-mid}}
+{{trans-bottom}}
 
-'''in surfing'''
-{{top}}
-{{mid}}
-{{bottom}}
+{{trans-top|in surfing}}
+{{trans-mid}}
+{{trans-bottom}}
 
+[[Category:English irregular verbs]]
 [[Category:English homophones]]
 [[Category:English ergative verbs]]
 
