--- a/en/d/dummy.26267.wikitext
+++ b/en/d/dummy.26267.wikitext
@@ -14,7 +14,7 @@
 #:* To understand the effects of the accident, we dropped a '''dummy''' from the rooftop.
 # A deliberately [[nonfunctional]] [[device]] or [[tool]] used in place of a functional one.
 #:* The hammer and drill in the display are '''dummies'''.
-# {{cattag|Australia|UK}} A [[pacifier]].
+# {{context|Australia|UK}} A [[pacifier]].
 #:* The baby wants its '''dummy'''.
 # {{bridge}} The partner of the winning bidder, who shows his or her hand.
 # <!--Dialect?--> A bodily [[gesture]] meant to [[fool]] an opposing player in sport; [[feint]]s.
@@ -33,31 +33,28 @@
 *[[dummy up]]
 
 ====Translations====
-'''something constructed with the size and form of a human'''
-{{top}}
+{{trans-top|something constructed with the size and form of a human}}
 *Finnish: [[nukke]]
-{{mid}}
+{{trans-mid}}
 *Italian: [[manichino]] {{m}}
-{{bottom}}
+{{trans-bottom}}
 
-'''for a baby'''
-{{top}}
+{{trans-top|for a baby}}
 *Dutch: [[fopspeen]], [[speen]] {{m}}
 *Finnish: [[tutti]]
 *French: [[suce]]
 *German: [[Schnuller]] {{m}}
-{{mid}}
+{{trans-mid}}
 *Greek: [[πιπίλα]] (pipila) {{f}}
 *Italian: [[ciuccio]] {{m}}
 *Mandarin: [[奶嘴]] ([[nǎizuǐ]])
-{{bottom}}
+{{trans-bottom}}
 
-'''an unintelligent person'''
-{{top}}
+{{trans-top|an unintelligent person}}
 *Finnish: [[tyhmä]], [[pölkkypää]]
-{{mid}}
+{{trans-mid}}
 *Italian: [[stupido]] {{m}}, [[it|scemo]] {{m}}
-{{bottom}}
+{{trans-bottom}}
 
 ===See also===
 *[[dud]]
