--- a/en/b/break.6806.wikitext
+++ b/en/b/break.6806.wikitext
@@ -153,7 +153,7 @@
 *Danish: holde [[pause]]
 *Dutch: [[pauzeren]]
 *Finnish: [[pitää]] [[tauko]]
-*Japanese: 休憩する (kyūkei-suru)
+*Japanese: [[休憩する]] (kyūkei-suru)
 {{trans-mid}}
 *Korean: [[쉬다]] (swida)
 *Portuguese: [[pausar]]
