--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -16,7 +16,7 @@
 ====Translations====
 {{trans-top|squirrel}}
 *Albanian: [[ketër]] {{m}}
-*Arabic: سنجاب
+*Arabic: {{ARchar|[[سنجاب]]}} (sinjāb) {{m}}
 *Basque: [[katagorri]]
 *Belarusian: [[звачайная ваверка]] {{f}}
 *Bosnian: [[vjeverica]] {{f}}
