robot  Adding: [[id:bubble]] <bubble#2411089>

--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -111,6 +111,7 @@ Partly imitative, also influenced by [[burble]].
 [[fr:bubble]]
 [[gl:bubble]]
 [[io:bubble]]
+[[id:bubble]]
 [[it:bubble]]
 [[ru:bubble]]
 [[fi:bubble]]
