--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -149,21 +149,21 @@
 *Slovene: [[svinja]] {{f}}, [[prasec]] {{m}}
 {{trans-bottom}}
 
-{{top|dirty or slovenly person}}
+{{trans-top|dirty or slovenly person}}
 *Afrikaans: [[vark]]
 *Bosnian: [[svinja]] {{f}}
 *Finnish: [[sika#Finnish|sika]], [[possu]]
 *French: [[cochon]] {{m}}, [[porc#French|porc]] {{m}}
 *German: [[Schwein]] {{n}}
 *Italian: [[porco]] {{m}}, [[maiale]] {{m}}
-{{mid}}
+{{trans-mid}}
 *Latvian: [[cūka]] {{f}}
 *Russian: [[свинья]] (svin’já) {{f}}, [[свинтус]] (svítus) {{m}}
 *Serbian:
 *:Cyrillic: [[свиња#Serbian|свиња]] {{f}}
 *:Roman: [[svinja#Serbian|svinja]] {{f}}
 *Slovene: [[prašič]] {{m}}
-{{bottom}}
+{{trans-bottom}}
 
 {{trans-top|derogatory slang for police officer}}
 *French: [[flic]] {{m}}, [[keuf]] {{m}} {{italbrac|verlan}}
