--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -113,7 +113,7 @@
 *:Roman: [[svinja#Serbian|svinja]] {{f}}
 *Slovak: [[prasa]] {{n}} (1)
 *Slovene: [[pujs]] {{m}}, [[prašič]] {{m}}, [[svinja]] {{f}}
-*Spanish: [[cerdo]] {{m}}, [[chancho]] {{m}} {{italbrac|Argentina|Chile|Costa Rica|Bolivia|Ecuador|Honduras|Nicaragua|Peru|Uruguay}}, [[coche]] {{m}} {{italbrac|Guatemala}}, [[cochino]] {{m}} {{italbrac|especially Mexico|Spain's Canary Islands|Venezuela}}, [[puerco]] {{m}} {{italbrac|Caribbean Islands|Mexico|Panama}}, [[tunco]] {{m}} {{italbrac|El Salvador}}
+*Spanish: [[cerdo]] {{m}}, [[chancho]] {{m}} {{italbrac|Argentina|Chile|Costa Rica|Bolivia|Ecuador|Honduras|Nicaragua|Peru|Uruguay}}, [[coche]] {{m}} {{italbrac|Guatemala}}, [[cochino]] {{m}} {{italbrac|especially Mexico|Spain's Canary Islands|standard usage in Venezuela}}, [[marrano]] {{m}} {{italbrac|Central and Western Venezuela|Colombia}}, [[puerco]] {{m}} {{italbrac|Caribbean Islands|Mexico|Panama}}, [[tunco]] {{m}} {{italbrac|El Salvador}}
 *Swahili: [[nguruwe]]
 *Swedish: [[gris]], [[svin]]
 *Tagalog: [[baboy]]
