moved [[Consonance]] to [[Literary consonance]] <consonance#2962098>

--- a/en/c/consonance.746531.wikitext
+++ b/en/c/consonance.746531.wikitext
@@ -1,9 +1,1 @@
-==English==
-===Noun===
-#[[harmony]]; agreement; lack of [[discordance]]
-
-[[fr:consonance]]
-[[ru:consonance]]
-[[vi:consonance]]
-[[tr:consonance]]
-[[zh:consonance]]
+#REDIRECT [[Literary consonance]]
