robot  Adding: [[id:quadrant]] <quadrant#2416529>

--- a/en/q/quadrant.4317.wikitext
+++ b/en/q/quadrant.4317.wikitext
@@ -61,6 +61,7 @@ From {{L.}} ''[[quadrans]]''.
 [[ar:quadrant]]
 [[fr:quadrant]]
 [[io:quadrant]]
+[[id:quadrant]]
 [[ru:quadrant]]
 [[vi:quadrant]]
 [[zh:quadrant]]
