--- a/en/d/dormouse.8238.wikitext
+++ b/en/d/dormouse.8238.wikitext
@@ -72,6 +72,7 @@ Unknown origin, though came to be associated with French [[dormire]] ‘sleep’
 
 [[et:dormouse]]
 [[fr:dormouse]]
+[[gl:dormouse]]
 [[ru:dormouse]]
 [[sl:dormouse]]
 [[vi:dormouse]]
